book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/Git-and-Other-Systems-Міграція-на-Git.html
+++ b/external/book/content/book/uk/v2/Git-and-Other-Systems-Міграція-на-Git.html
@@ -130,8 +130,8 @@ Date:   Sun May 3 00:12:22 2009 +0000
 </div>
 <div class="paragraph">
 <p>Може так статися, що ви побачите якісь зайві гілки з наростками <code>@xxx</code> (де xxx — число), хоча в Subversion ви бачите лише одну гілку.
-Насправді це функціонал Subversion під назвою “peg-revisions” для якого в Git просто немає синтаксичного відповідника.
-Отже, <code>git svn</code> просто додає номер версії svn до імʼя гілки саме так, як би ви написали його в svn, щоб звернутися до peg-revision цієї гілки.
+Насправді це функціонал Subversion під назвою <code>`peg-revisions'' для якого в Git просто немає синтаксичного відповідника.
+Отже, `git svn</code> просто додає номер версії svn до імʼя гілки саме так, як би ви написали його в svn, щоб звернутися до peg-revision цієї гілки.
 Якщо вам начхати на ці peg-revisions, просто вилучите їх:</p>
 </div>
 <div class="listingblock">
@@ -649,7 +649,7 @@ TFVC доволі ліберальний щодо того, що може бут
 </div>
 </div>
 <div class="paragraph">
-<p>Ця команда отримує всі набори змін в історії проекту та кладе їх у файл AUTHORS_TMP, з якого ми отримаємо дані зі стовпчика <em>User</em> (другого).
+<p>Ця команда отримує всі набори змін в історії проекту та кладе їх у файл AUTHORS_TMP, з якого ми отримаємо дані зі стовпчика 'User' (другого).
 Відкрийте файл та з’ясуйте з якого символу починається та на якому закінчується стовпчик, та замініть у наступній команді параметри <code>11-20</code> команди <code>cut</code> своїми значеннями:</p>
 </div>
 <div class="listingblock">
@@ -669,7 +669,7 @@ TFVC доволі ліберальний щодо того, що може бут
 </div>
 </div>
 <div class="paragraph">
-<p>Частина ліворуч — це поле “User” з TFVC, а частина праворуч від знаку дорівнює — це ім’я користувача, яке використовуватиметься для комітів Git.</p>
+<p>Частина ліворуч — це поле ``User'' з TFVC, а частина праворуч від знаку дорівнює — це ім’я користувача, яке використовуватиметься для комітів Git.</p>
 </div>
 <div class="paragraph">
 <p>Щойно у вас є такий файл, можна робити повний клон проекту TFVC, який вам потрібен:</p>
@@ -689,7 +689,7 @@ TFVC доволі ліберальний щодо того, що може бут
 </div>
 </div>
 <div class="paragraph">
-<p>Вона використовує команду <code>sed</code> з середовища Git-bash, щоб замінити будь-який рядок, що починається з “git-tfs-id:”, порожнечею, яку потім проігнорує Git.</p>
+<p>Вона використовує команду <code>sed</code> з середовища Git-bash, щоб замінити будь-який рядок, що починається з ``git-tfs-id:'', порожнечею, яку потім проігнорує Git.</p>
 </div>
 <div class="paragraph">
 <p>Коли все це зроблено, ви готові додати нове віддалене сховище, надіслати туди всі свої гілки, та команда може розпочати роботу з Git.</p>
@@ -757,7 +757,7 @@ end</code></pre>
 </div>
 <div class="paragraph">
 <p>Ви виконуєте метод <code>print_export</code> в кожній директорії, який приймає маніфест та позначку попереднього відбитку, та повертає маніфест та позначку поточного; таким чином, ви можете їх правильно звʼязати.
-“Позначка” (mark) — це термін <code>fast-import</code> для ідентифікатора, який ви даєте коміту; під час створення комітів, ви надаєте кожному позначку, яку можете використовувати для звʼязування його з іншими комітами.
+<code>`Позначка'' (mark) — це термін `fast-import</code> для ідентифікатора, який ви даєте коміту; під час створення комітів, ви надаєте кожному позначку, яку можете використовувати для звʼязування його з іншими комітами.
 Отже, перше, що треба зробити в методі <code>print_export</code> — згенерувати позначку з імʼя директорії:</p>
 </div>
 <div class="listingblock">
