--- a/external/book/content/book/uk/v2/Git-зсередини-Кухонні-та-парадні-команди.html
+++ b/external/book/content/book/uk/v2/Git-зсередини-Кухонні-та-парадні-команди.html
@@ -29,7 +29,7 @@ url: "/book/uk/v2/Git-зсередини-Кухонні-та-парадні-ко
 <div class="paragraph">
 <p>Ця книга переважно розповідає про використання Git за допомогою близько трьох десятків підкоманд на кшталт <code>checkout</code>, <code>branch</code>, <code>remote</code>.
 Та оскільки Git спершу був більше інструментом для системи керування версіями, ніж повною СКВ з дружнім інтерфейсом, існує купа  підкоманд, що здійснюють низькорівневу роботу і були створені для послідовного використання у стилі UNIX або використання у скриптах.
-Ці команди зазвичай називають “кухонними” (англійський термін “plumbing” — трубопровід, сантехніка), а орієнтовані на користувача — “парадними” (англійський термін “porcelain” — порцелянові).</p>
+Ці команди зазвичай називають <code>кухонними'' (англійський термін </code>plumbing'' — трубопровід, сантехніка), а орієнтовані на користувача — <code>парадними'' (англійський термін </code>porcelain'' — порцелянові).</p>
 </div>
 <div class="paragraph">
 <p>Як ви вже напевно помітили, перші дев’ять розділів книги були присвячені переважно парадним командам.
