--- a/external/book/content/book/uk/v2/Git-зсередини-Об’єкти-Git.html
+++ b/external/book/content/book/uk/v2/Git-зсередини-Об’єкти-Git.html
@@ -253,9 +253,9 @@ $ git cat-file -p 0155eb4229851634a0f03eb265b69f5a2d56f341
 </div>
 </div>
 <div class="paragraph">
-<p>Зауважте, що це дерево містить обидва файли, а також, що SHA-1 файлу <code>test.txt</code> таке саме, як у вищенаведеній “верcії 2” цього файлу.
+<p>Зауважте, що це дерево містить обидва файли, а також, що SHA-1 файлу <code>test.txt</code> таке саме, як у вищенаведеній <code>`верcії 2'' цього файлу.
 Заради розваги, додайте перше дерево як піддиректорію другого.
-Ви можете читати дерева до індексу, якщо викликаєте <code>git read-tree</code>.
+Ви можете читати дерева до індексу, якщо викликаєте `git read-tree</code>.
 У даному випадку, ви можете зчитати існуюче дерево до вашого індексу як піддерево за допомогою опції <code>--prefix</code> цієї команди:</p>
 </div>
 <div class="listingblock">
@@ -399,7 +399,7 @@ Date:   Fri May 22 18:09:34 2009 -0700
 <div class="paragraph">
 <p>Ми вже згадували, що разом з вмістом кожного обʼєкта бази даних Git зберігається заголовок.
 Приділімо хвилинку тому, щоб подивитись, як Git зберігає свої обʼєкти.
-Ви побачите, як зберегти обʼєкт блоб — у цьому випадку, рядок “what is up, doc?” — в інтерактивному режимі скриптової мови Ruby.</p>
+Ви побачите, як зберегти обʼєкт блоб — у цьому випадку, рядок ``what is up, doc?'' — в інтерактивному режимі скриптової мови Ruby.</p>
 </div>
 <div class="paragraph">
 <p>Ви можете запустити інтерактивний режим Ruby командою <code>irb</code>:</p>
