--- a/external/book/content/book/uk/v2/Git-зсередини-Посилання-Git.html
+++ b/external/book/content/book/uk/v2/Git-зсередини-Посилання-Git.html
@@ -24,7 +24,7 @@ url: "/book/uk/v2/Git-зсередини-Посилання-Git.html"
 Натомість легше було б, якби у вас був файл, що зберігає це значення SHA-1 під простою назвою, щоб ви могли використовувати просту назву замість значення SHA-1.</p>
 </div>
 <div class="paragraph">
-<p>У Git ці прості назви відомі як “посилання” (reference або ref). Ви можете знайти файли, які містять ці значення SHA-1 у директорії <code>.git/refs</code>.
+<p>У Git ці прості назви відомі як <code>`посилання'' (reference або ref). Ви можете знайти файли, які містять ці значення SHA-1 у директорії `.git/refs</code>.
 У поточному проекті, ця директорія не містить файлів, проте вона містить просту структуру:</p>
 </div>
 <div class="listingblock">
