--- a/external/book/content/book/uk/v2/Git-зсередини-Специфікація-посилань-refspec.html
+++ b/external/book/content/book/uk/v2/Git-зсередини-Специфікація-посилань-refspec.html
@@ -39,8 +39,8 @@ url: "/book/uk/v2/Git-зсередини-Специфікація-посилан
 </div>
 </div>
 <div class="paragraph">
-<p>Формат специфікації — необов’язвокий перший <code>{plus}</code>, за яким слідує <code>&lt;src&gt;:&lt;dst&gt;</code>, де <code>&lt;src&gt;</code> — це шаблон для посилань віддаленого сховища, а <code>&lt;dst&gt;</code> — під яким локальним ім’ям Git стежитиме за цим посиланням.
-<code>{plus}</code> каже Git оновлювати посилання, навіть якщо буде не швидке перемотування вперед.</p>
+<p>Формат специфікації — необов’язвокий перший <code>+</code>, за яким слідує <code>&lt;src&gt;:&lt;dst&gt;</code>, де <code>&lt;src&gt;</code> — це шаблон для посилань віддаленого сховища, а <code>&lt;dst&gt;</code> — під яким локальним ім’ям Git стежитиме за цим посиланням.
+<code>+</code> каже Git оновлювати посилання, навіть якщо буде не швидке перемотування вперед.</p>
 </div>
 <div class="paragraph">
 <p>У типовому випадку, який автоматично записує команда <code>git remote add</code>, Git отримує всі посилання під <code>refs/heads/</code> з віддаленого сховища та записує їх до <code>refs/remotes/origin/</code> локально.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>У даному випадку, отримання гілки <code>master</code> було відхилено, для неї не дозволено перемотування вперед.
-Це можна змінити: треба додати <code>{plus}</code> на початку специфікації.</p>
+Це можна змінити: треба додати <code>+</code> на початку специфікації.</p>
 </div>
 <div class="paragraph">
 <p>Ви також можете задати декілька специфікацій для отримання у своєму конфігураційному файлі.
