--- a/external/book/content/book/uk/v2/Git-зсередини-Файли-пакунки.html
+++ b/external/book/content/book/uk/v2/Git-зсередини-Файли-пакунки.html
@@ -113,8 +113,8 @@ $ git commit -am 'modified repo a bit'
 </div>
 <div class="paragraph">
 <p>Виявляється, що він це може.
-Початковий формат, в якому Git зберігає об’єкти на диску називається “вільний” (loose) формат об’єктів.
-Втім, подеколи Git пакує декілька з цих об’єктів до одного двійкового файлу, який називається “файл пакунок”, щоб зберегти місце та бути ефективнішим.
+Початковий формат, в якому Git зберігає об’єкти на диску називається <code>вільний'' (loose) формат об’єктів.
+Втім, подеколи Git пакує декілька з цих об’єктів до одного двійкового файлу, який називається </code>файл пакунок'', щоб зберегти місце та бути ефективнішим.
 Git робить це, якщо у вас забагато вільних об’єктів, якщо ви виконаєте команду <code>git gc</code> вручну, або якщо ви надішлете щось до віддаленого сервера.
 Щоб побачити, що станеться, ви можете вручну попросити Git спакувати об’єкти, викликавши команду <code>git gc</code>:</p>
 </div>
@@ -142,7 +142,7 @@ Total 18 (delta 3), reused 0 (delta 0)</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Об’єкти, які залишились — це блоби, на які не вказує жоден коміт — у даному випадку, це створені раніше для прикладу блоби “what is up, doc?” та “test content”.
+<p>Об’єкти, які залишились — це блоби, на які не вказує жоден коміт — у даному випадку, це створені раніше для прикладу блоби <code>what is up, doc?'' та </code>test content''.
 Оскільки ви ніколи не додавали їх до комітів, вони вважаються висячими та не спаковані до вашого нового файлу пакунку.</p>
 </div>
 <div class="paragraph">
