--- a/external/book/content/book/uk/v2/Git-на-сервері-GitWeb.html
+++ b/external/book/content/book/uk/v2/Git-на-сервері-GitWeb.html
@@ -94,6 +94,6 @@ $ sudo cp -Rf gitweb /var/www/</code></pre>
 </div>
 <div class="paragraph">
 <p>Як і попередній CGI скрипт, GitWeb може працювати на будь-якому здатному на CGI або Perl веб сервері. Якщо ви хочете використовувати щось інше, налаштування має бути легким.
-Тепер ви можете зайти до <code>http://gitserver/</code> та побачити ваші сховища.</p>
+Тепер ви можете зайти до <code><a href="http://gitserver/" class="bare">http://gitserver/</a></code> та побачити ваші сховища.</p>
 </div>
 <div id="nav"><a href="{{< previous-section >}}">prev</a> | <a href="{{< next-section >}}">next</a></div>
