--- a/external/book/content/book/uk/v2/Git-на-сервері-Демон-Git.html
+++ b/external/book/content/book/uk/v2/Git-на-сервері-Демон-Git.html
@@ -21,7 +21,7 @@ url: "/book/uk/v2/Git-на-сервері-Демон-Git.html"
 <h2 id="_демон_git">Демон Git</h2>
 <div class="paragraph">
 <p>
-Тепер встановимо демон, що надає доступ до сховищ за допомогою протоколу “Git”.
+Тепер встановимо демон, що надає доступ до сховищ за допомогою протоколу ``Git''.
 Це поширений вибір для швидкого, неавторизовоного доступу до ваших даних Git.
 Пам’ятайте, що оскільки він не авторизований, все до чого ви надаєте доступ за допомогою цього протоколу стає загальнодоступним у його мережі.</p>
 </div>
@@ -104,7 +104,7 @@ respawn</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>З причин безпеки, ми заохочуємо вас запускати цей демон тільки з користувача, що має доступ тільки на читання сховищ — це легко зробити, створивши нового користувача <em>git-ro</em> та запустивши демон з нього.
+<p>З причин безпеки, ми заохочуємо вас запускати цей демон тільки з користувача, що має доступ тільки на читання сховищ — це легко зробити, створивши нового користувача 'git-ro' та запустивши демон з нього.
 Для простоти ми просто запустимо його з нашого користувача <code>git</code>, з якого працює і <code>git-shell</code>.</p>
 </div>
 <div class="paragraph">
