--- a/external/book/content/book/uk/v2/Git-на-сервері-Отримання-Git-на-сервері.html
+++ b/external/book/content/book/uk/v2/Git-на-сервері-Отримання-Git-на-сервері.html
@@ -136,8 +136,8 @@ $ git init --bare --shared</code></pre>
 Ви можете не захотіти виконувати <code>adduser</code> та встановлювати тимчасові паролі для кожного користувача.</p>
 </div>
 <div class="paragraph">
-<p>Другий метод — це створити єдиного користувача <em>git</em>, попросити кожного користувача, у котрого має бути доступ на запис відправити вам публічний ключ SSH, та додати всі ключі до файлу <code>~/.ssh/authorized_keys</code> вашого нового користувача <em>git</em>.
-Після цього, усі будуть мати доступ до машини через користувача <em>git</em>.
+<p>Другий метод — це створити єдиного користувача 'git', попросити кожного користувача, у котрого має бути доступ на запис відправити вам публічний ключ SSH, та додати всі ключі до файлу <code>~/.ssh/authorized_keys</code> вашого нового користувача 'git'.
+Після цього, усі будуть мати доступ до машини через користувача 'git'.
 Це ніяким чином не впливає на дані коміту — користувач SSH, з якого ви підключаєтесь, не впливає на коміти, що ви записуєте.</p>
 </div>
 <div class="paragraph">
