--- a/external/book/content/book/uk/v2/Git-на-сервері-Протоколи.html
+++ b/external/book/content/book/uk/v2/Git-на-сервері-Протоколи.html
@@ -104,7 +104,7 @@ url: "/book/uk/v2/Git-на-сервері-Протоколи.html"
 </div>
 <div class="paragraph">
 <p>Нарешті, цей протокол не захищає схвовище від випадкових пошкоджень.
-Кожен користувач має повний доступ до “віддаленої” теки, і ніщо не заважає їм змінити чи вилучити внутрішні файли Git і зіпсувати сховище.</p>
+Кожен користувач має повний доступ до ``віддаленої'' теки, і ніщо не заважає їм змінити чи вилучити внутрішні файли Git і зіпсувати сховище.</p>
 </div>
 </div>
 </div>
