--- a/external/book/content/book/uk/v2/Git-на-сервері-Розумний-HTTP.html
+++ b/external/book/content/book/uk/v2/Git-на-сервері-Розумний-HTTP.html
@@ -77,7 +77,7 @@ ScriptAlias /git/ /usr/lib/git-core/git-http-backend/</code></pre>
 </div>
 <div class="paragraph">
 <p>Щоб це працювало необхідно створити файл <code>.htpasswd</code> з паролями дозволених користувачів.
-Ось приклад того, як можна додати користувача “schacon” до цього файлу:</p>
+Ось приклад того, як можна додати користувача ``schacon'' до цього файлу:</p>
 </div>
 <div class="listingblock">
 <div class="content">
