--- a/external/book/content/book/uk/v2/GitHub-Створення-та-налаштування-облікового-запису.html
+++ b/external/book/content/book/uk/v2/GitHub-Створення-та-налаштування-облікового-запису.html
@@ -27,7 +27,7 @@ GitHub - це найбільший хостинг для сховищ Git, та 
 <div class="paragraph">
 <p>
 Спершу вам треба створити безкоштовний обліковий запис.
-Просто зайдіть до <a href="https://github.com" class="bare">https://github.com</a>, оберіть ім’я користувача, якого ще ні в кого немає, надайте адресу електронної пошти та пароль, натисніть на велику зелену кнопку “Sign up for Github” (Зареєструватись на Github).</p>
+Просто зайдіть до <a href="https://github.com" class="bare">https://github.com</a>, оберіть ім’я користувача, якого ще ні в кого немає, надайте адресу електронної пошти та пароль, натисніть на велику зелену кнопку ``Sign up for Github'' (Зареєструватись на Github).</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -75,19 +75,19 @@ GitHub відправить вам листа щоб перевірити адр
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/account-settings.png" >}}" alt="Посилання на налаштування облікового запису (``Account settings'').">
 </div>
-<div class="title">Рисунок 82. Посилання на налаштування облікового запису (“Account settings”).</div>
+<div class="title">Рисунок 82. Посилання на налаштування облікового запису (``Account settings'').</div>
 </div>
 <div class="paragraph">
-<p>Оберіть секцію “SSH keys” (SSH ключі) з лівого боку.</p>
+<p>Оберіть секцію ``SSH keys'' (SSH ключі) з лівого боку.</p>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/ssh-keys.png" >}}" alt="Посилання ``SSH keys'' (SSH ключі).">
 </div>
-<div class="title">Рисунок 83. Посилання “SSH keys” (SSH ключі).</div>
+<div class="title">Рисунок 83. Посилання ``SSH keys'' (SSH ключі).</div>
 </div>
 <div class="paragraph">
-<p>Далі, натисніть кнопку “Add an SSH key” (додати SSH ключ), назвіть ваш ключ, та вставте вміст вашого файлу з публічним ключем <code>~/.ssh/id_rsa.pub</code> (якщо ви не змінювали назву) до текстового поля, та натисніть “Add key” (додати ключ).</p>
+<p>Далі, натисніть кнопку <code>Add an SSH key'' (додати SSH ключ), назвіть ваш ключ, та вставте вміст вашого файлу з публічним ключем <code>~/.ssh/id_rsa.pub</code> (якщо ви не змінювали назву) до текстового поля, та натисніть </code>Add key'' (додати ключ).</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -109,13 +109,13 @@ GitHub відправить вам листа щоб перевірити адр
 <h3 id="_personal_avatar">Ваш аватар</h3>
 <div class="paragraph">
 <p>Далі, якщо ви бажаєте, можете змінити згенерований аватар обраним вами зображенням.
-Спершу перейдіть до вкладки “Profile” (профіль, над вкладкою SSH ключі) та натисніть “Upload new picture” (Відвантажити нове зображення).</p>
+Спершу перейдіть до вкладки <code>Profile'' (профіль, над вкладкою SSH ключі) та натисніть </code>Upload new picture'' (Відвантажити нове зображення).</p>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/your-profile.png" >}}" alt="Посилання на ``Profile'' (профіль).">
 </div>
-<div class="title">Рисунок 84. Посилання на “Profile” (профіль).</div>
+<div class="title">Рисунок 84. Посилання на ``Profile'' (профіль).</div>
 </div>
 <div class="paragraph">
 <p>Ми оберемо копію логотипу Git, що вже є на нашому жорсткому диску та потім зможемо обрізати зображення.</p>
@@ -156,7 +156,7 @@ GitHub відправить вам листа щоб перевірити адр
 <div class="sect3">
 <h3 id="_двокрокова_авторизація">Двокрокова авторизація</h3>
 <div class="paragraph">
-<p>Нарешті, для більшої безпеки, вам безумовно слід налаштувати Дворокову Авторизацію чи “2FA” (Two-factor Authentication).
+<p>Нарешті, для більшої безпеки, вам безумовно слід налаштувати Дворокову Авторизацію чи ``2FA'' (Two-factor Authentication).
 Двокрокова Авторизація - це механізм авторизації, що наразі стає все більш популярним задля зменшення ризиків крадіжки вашого паролю або того, що хтось буде діяти під вашим обліковим записом.
 Якщо ви її ввімкнете, GitHub буде потребувати два різних методи авторизації, отже якщо один з них був зламаний, зловмисник все одно не зможе отримати доступ до вашого облікового запису.</p>
 </div>
@@ -170,7 +170,7 @@ GitHub відправить вам листа щоб перевірити адр
 <div class="title">Рисунок 87. 2FA у вкладці Безпеки</div>
 </div>
 <div class="paragraph">
-<p>Якщо ви клацнете на кнопку “Set up two-factor authentication” (Налаштувати двокрокову авторизацію), ви перейдете на сторінку конфігурації, де ви зможете вибрати використовувати програму для телефону для генерації другого коду (“time based one-time password” - оснований на часі одноразовий пароль), або GitHub може відправляти вам код через SMS щоразу, коли вам треба ввійти в систему.</p>
+<p>Якщо ви клацнете на кнопку <code>Set up two-factor authentication'' (Налаштувати двокрокову авторизацію), ви перейдете на сторінку конфігурації, де ви зможете вибрати використовувати програму для телефону для генерації другого коду (</code>time based one-time password'' - оснований на часі одноразовий пароль), або GitHub може відправляти вам код через SMS щоразу, коли вам треба ввійти в систему.</p>
 </div>
 <div class="paragraph">
 <p>Після вибору методу, що вам подобається, та виконання інструкції з налаштування 2FA, ваш обліковий запис буде трохи більш безпечним, та вам доведеться вводити код на додаток до паролю щоразу ви заходите на GitHub.</p>
