--- a/external/book/content/book/uk/v2/Інструменти-Git-Rerere.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Rerere.html
@@ -21,7 +21,7 @@ url: "/book/uk/v2/Інструменти-Git-Rerere.html"
 <h2 id="ref_rerere">Rerere</h2>
 <div class="paragraph">
 <p>Можливості <code>git rerere</code> є трохи прихованими.
-Назва походить від “використовуй записані розвʼязання” (reuse recorded resolution) та, як зрозуміло з назви, дозволяє вам попросити Git запамʼятати, як ви розвʼязали конфлікт шматків (hunk), щоб наступного разу Git міг автоматично розвʼязати такий самий конфлікт для вас.</p>
+Назва походить від ``використовуй записані розвʼязання'' (reuse recorded resolution) та, як зрозуміло з назви, дозволяє вам попросити Git запамʼятати, як ви розвʼязали конфлікт шматків (hunk), щоб наступного разу Git міг автоматично розвʼязати такий самий конфлікт для вас.</p>
 </div>
 <div class="paragraph">
 <p>Є декілька ситуацій, в яких цей функціонал може бути дуже доречним.
@@ -62,7 +62,7 @@ end</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>В одній гілці ми змінюємо слово “hello” на “holf”, потім в іншій гілці змінюємо “world” на “mundo”, як і раніше.</p>
+<p>В одній гілці ми змінюємо слово <code>hello'' на </code>holf'', потім в іншій гілці змінюємо <code>world'' на </code>mundo'', як і раніше.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -165,7 +165,7 @@ hello.rb</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Це нам каже, що коли Git побачить конфлікт шмату (hunk) у файлі <code>hello.rb</code>, де з одного боку “hello mundo”, а з іншого “hola world”, він розвʼяже конфлікт рядком “hola mundo”.</p>
+<p>Це нам каже, що коли Git побачить конфлікт шмату (hunk) у файлі <code>hello.rb</code>, де з одного боку <code>hello mundo'', а з іншого </code>hola world'', він розвʼяже конфлікт рядком ``hola mundo''.</p>
 </div>
 <div class="paragraph">
 <p>Тепер ми можемо позначити його розвʼязаним та зберегти у коміті:</p>
