--- a/external/book/content/book/uk/v2/Інструменти-Git-Інтерактивне-індексування.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Інтерактивне-індексування.html
@@ -44,7 +44,7 @@ What now&gt;</code></pre>
 У списку проіндексовані зміни вказані ліворуч, а непроіндексовані - праворуч.</p>
 </div>
 <div class="paragraph">
-<p>Після цього йде секція команд (“Commands”), що дозволяє робити чимало всього, наприклад, індексувати та деіндексувати файли, індексувати частини файлів, додавати не супроводжувані файли та відображати проіндексовані зміни.</p>
+<p>Після цього йде секція команд (``Commands''), що дозволяє робити чимало всього, наприклад, індексувати та деіндексувати файли, індексувати частини файлів, додавати не супроводжувані файли та відображати проіндексовані зміни.</p>
 </div>
 <div class="sect3">
 <h3 id="_індексування_та_деіндексування_файлів">Індексування та деіндексування файлів</h3>
