--- a/external/book/content/book/uk/v2/Інструменти-Git-Вибір-ревізій.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Вибір-ревізій.html
@@ -64,7 +64,7 @@ Date:   Thu Dec 11 14:58:32 2008 -0800
 </div>
 </div>
 <div class="paragraph">
-<p>У цьому випадку, скажімо, вас цікавить коміт, що його хеш починається з <code>1c002dd...</code>.
+<p>У цьому випадку, скажімо, вас цікавить коміт, що його хеш починається з <code>1c002dd…​</code>.
 Ви можете дослідити цей коміт будь-якою з таких варіацій <code>git show</code> (якщо коротші версії однозначні):</p>
 </div>
 <div class="listingblock">
@@ -131,7 +131,7 @@ SHA-1 сума має 20 байт, тобто 160 біт.
 <h3 id="_branch_references">Гілкові посилання</h3>
 <div class="paragraph">
 <p>Існує зручний спосіб послатися на коміт, якщо існує гілка, що на нього вказує — у цьому випадку достатньо просто використати назву гілки замість коміту в будь-якій команді Git, що очікує посилання на коміт.
-Наприклад, якщо ви бажаєте переглянути останній об’єкт-коміт на гілці, наступні команди рівнозначні, якщо гілка <code>topic1</code> вказує на коміт <code>ca82a6d...</code>:</p>
+Наприклад, якщо ви бажаєте переглянути останній об’єкт-коміт на гілці, наступні команди рівнозначні, якщо гілка <code>topic1</code> вказує на коміт <code>ca82a6d…​</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -155,7 +155,7 @@ ca82a6dff817ec66f44342007202690a93763949</code></pre>
 <div class="sect3">
 <h3 id="_git_reflog">Скорочення reflog (журнал посилань)</h3>
 <div class="paragraph">
-<p>Одна з речей, які Git робить у фоні доки ви собі працюєте — він зберігає “reflog” — журнал того, де був ваш HEAD та гілкових посилань за останні декілька місяців.</p>
+<p>Одна з речей, які Git робить у фоні доки ви собі працюєте — він зберігає ``reflog'' — журнал того, де був ваш HEAD та гілкових посилань за останні декілька місяців.</p>
 </div>
 <div class="paragraph">
 <p>Ви можете продивитись свій журнал посилань за допомогою <code>git reflog</code>:</p>
@@ -232,7 +232,7 @@ Date:   Thu Dec 11 15:08:43 2008 -0800
 <td class="content">
 <div class="title">Вважайте журнал посилань аналогом історії командної оболонки в Git</div>
 <div class="paragraph">
-<p>Якщо ви знайомі з UNIX чи Linux, ви можете вважати журнал посилань аналогом історії командної оболонки у Git, що явно зосереджена лише на вас і вашій “сесії”, і жодним чином не стосується будь-кого іншого, хто може працювати з тією ж машиною.</p>
+<p>Якщо ви знайомі з UNIX чи Linux, ви можете вважати журнал посилань аналогом історії командної оболонки у Git, що явно зосереджена лише на вас і вашій ``сесії'', і жодним чином не стосується будь-кого іншого, хто може працювати з тією ж машиною.</p>
 </div>
 </td>
 </tr>
@@ -260,7 +260,7 @@ Date:   Thu Dec 11 15:08:43 2008 -0800
 </div>
 </div>
 <div class="paragraph">
-<p>Тоді ви можете побачити попередній коміт за допомогою <code>HEAD^</code>, що означає “батько HEAD”:</p>
+<p>Тоді ви можете побачити попередній коміт за допомогою <code>HEAD^</code>, що означає ``батько HEAD'':</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -296,7 +296,7 @@ $ git show "HEAD^"   # OK</code></pre>
 </table>
 </div>
 <div class="paragraph">
-<p>Ви також можете задати число після <code>^</code> — наприклад, <code>d921970^2</code> означає “другий батько коміту d921970.”
+<p>Ви також можете задати число після <code>^</code> — наприклад, <code>d921970^2</code> означає ``другий батько коміту d921970.''
 Цей синтаксис корисний тільки для комітів злиття, які мають більш ніж одного батька.
 Перший батько — це гілка, на якій ви були при злитті, а другий — це коміт гілки, яку ви зливали:</p>
 </div>
@@ -321,7 +321,7 @@ Date:   Wed Dec 10 22:22:03 2008 +0000
 <p>Другою головною операцією для вибору пращурів є <code>~</code> (тильда).
 Вона також вказує на першого батька, отже <code>HEAD~</code> та <code>HEAD^</code> рівнозначні.
 Різниця з’являється, коли ви додаєте число.
-<code>HEAD~2</code> означає “перший батько першого батька,” або “дідусь” — вона переходить вздовж перших батьків задану кількість разів.
+<code>HEAD~2</code> означає <code>перший батько першого батька,'' або </code>дідусь'' — вона переходить вздовж перших батьків задану кількість разів.
 Наприклад, у наведеній вище історії, <code>HEAD~3</code> буде</p>
 </div>
 <div class="listingblock">
@@ -335,7 +335,7 @@ Date:   Fri Nov 7 13:47:59 2008 -0500
 </div>
 </div>
 <div class="paragraph">
-<p>Це також може бути записано як <code>HEAD^^^</code>, що також є першим батьком першого батька першого батька:</p>
+<p>Це також може бути записано як <code>HEAD<sup>^</sup></code>, що також є першим батьком першого батька першого батька:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -355,7 +355,7 @@ Date:   Fri Nov 7 13:47:59 2008 -0500
 <h3 id="_commit_ranges">Інтервали комітів</h3>
 <div class="paragraph">
 <p>Тепер, коли ви вже знаєте, як задавати індивідуальні коміти, розгляньмо як задавати інтервали комітів.
-Це особливо корисно для керування гілками - якщо у вас багато гілок, ви можете використовувати специфікації інтервалів для відповіді на запитання на кшталт “Що зроблено у цій гілці, проте досі не злито до головної гілки?”</p>
+Це особливо корисно для керування гілками - якщо у вас багато гілок, ви можете використовувати специфікації інтервалів для відповіді на запитання на кшталт ``Що зроблено у цій гілці, проте досі не злито до головної гілки?''</p>
 </div>
 <div class="sect4">
 <h4 id="_подвійна_крапка">Подвійна крапка</h4>
@@ -372,8 +372,8 @@ Date:   Fri Nov 7 13:47:59 2008 -0500
 </div>
 <div class="paragraph">
 <p>Скажімо, ви хочете дізнатися, що є у вашій гілці <code>experiment</code> такого, що досі не злито до вашої гілки <code>master</code>.
-Ви можете попросити Git показати журнал саме таких комітів за допомогою <code>master..experiment</code> - це означає “усі коміти, що є досяжними з experiment, проте не є досяжними з master.”
-Задля стислості та зрозумілості в подальших прикладах замість справжнього виводу команди <code>git log</code> для позначення комітів використовуються літери, проте у правильному порядку:</p>
+Ви можете попросити Git показати журнал саме таких комітів за допомогою <code>master..experiment</code> - це означає <code>`усі коміти, що є досяжними з experiment, проте не є досяжними з master.''
+Задля стислості та зрозумілості в подальших прикладах замість справжнього виводу команди `git log</code> для позначення комітів використовуються літери, проте у правильному порядку:</p>
 </div>
 <div class="listingblock">
 <div class="content">
