--- a/external/book/content/book/uk/v2/Інструменти-Git-Заміна.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Заміна.html
@@ -132,7 +132,7 @@ c1822cf first commit</code></pre>
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Команда <code>commit-tree</code> є однією з набору команд, які, зазвичай, називають <em>кухонними</em> (plumbing).
+<p>Команда <code>commit-tree</code> є однією з набору команд, які, зазвичай, називають 'кухонними' (plumbing).
 Це команди, які, щиро кажучи, створені не для безпосереднього використання, а для використання <strong>іншими</strong> командами Git, щоб виконувати менші завдання.
 Коли ж доводиться робити більш чудернацькі речі, на кшталт описаного тут, вони дозволяють робити дійсно низькорівневі речі, проте, не призначені для щоденного користування.
 Ви можете дізнатись більше про кухонні команди в <a href="{{< relurl "book/uk/v2/ch00/_plumbing_porcelain" >}}">Кухонні та парадні команди</a></p>
