--- a/external/book/content/book/uk/v2/Інструменти-Git-Пакування.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Пакування.html
@@ -23,12 +23,12 @@ url: "/book/uk/v2/Інструменти-Git-Пакування.html"
 <p>Хоч ми й розглянули звичайні способи передачі даних через мережу (HTTP, SSH тощо), насправді існує ще один, не такий поширений метод зробити це, що іноді може бути доволі корисним.</p>
 </div>
 <div class="paragraph">
-<p>Git здатен до “пакування” (bundling) своїх даних в один файл.
+<p>Git здатен до <code>`пакування'' (bundling) своїх даних в один файл.
 Це може бути корисним у різноманітних випадках.
 Можливо, ваша мережа не працює, а ви бажаєте відправити свої зміни співробітникам.
 Мабуть, ви працюєте десь поза офісом та не маєте доступу до локальної мережі через заходи безпеки.
 Можливо, ваша мережева картка просто зламалась.
-Можливо, наразі у вас немає доступу до спільного сервера, ви бажаєте надіслати електронного листа з оновленнями, проте не бажаєте відправляти 40 комітів через <code>format-patch</code>.</p>
+Можливо, наразі у вас немає доступу до спільного сервера, ви бажаєте надіслати електронного листа з оновленнями, проте не бажаєте відправляти 40 комітів через `format-patch</code>.</p>
 </div>
 <div class="paragraph">
 <p>Ось тоді команда <code>git bundle</code> може допомогти.
@@ -191,7 +191,7 @@ From ../commits.bundle
 </div>
 </div>
 <div class="paragraph">
-<p>Тепер ми бачимо, що імпортовані коміти є в гілці <em>other-master</em>, а також усі зроблені нами тим часом коміти в нашій власній гілці <em>master</em>.</p>
+<p>Тепер ми бачимо, що імпортовані коміти є в гілці 'other-master', а також усі зроблені нами тим часом коміти в нашій власній гілці 'master'.</p>
 </div>
 <div class="listingblock">
 <div class="content">
