--- a/external/book/content/book/uk/v2/Інструменти-Git-Переписування-історії.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Переписування-історії.html
@@ -164,7 +164,7 @@ f7f3f6d changed my name a bit</code></pre>
 </div>
 <div class="paragraph">
 <p>Вам треба відредагувати скрипт щоб він зупинився на коміті, який ви бажаєте редагувати.
-Для цього змініть слово ‘pick’ (підібрати) на ‘edit’ (редагувати) для кожного з комітів, після яких треба зупинитися.
+Для цього змініть слово `pick' (підібрати) на `edit' (редагувати) для кожного з комітів, після яких треба зупинитися.
 Наприклад, щоб змінити тільки повідомлення третього коміту, можна змінити файл наступним чином:</p>
 </div>
 <div class="listingblock">
@@ -218,7 +218,7 @@ Once you’re satisfied with your changes, run (Щойно ви задоволе
 <h3 id="_зміна_послідовності_комітів">Зміна послідовності комітів</h3>
 <div class="paragraph">
 <p>Інтерактивне перебазування комітів можна також використовувати для зміни порядку комітів або їх повного вилучення.
-Якщо ви бажаєте вилучити коміт “added cat-file” та змінити послідовність решти двох комітів, то можете змінити скрипт перебазування з такого</p>
+Якщо ви бажаєте вилучити коміт ``added cat-file'' та змінити послідовність решти двох комітів, то можете змінити скрипт перебазування з такого</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -238,7 +238,7 @@ pick f7f3f6d changed my name a bit</code></pre>
 </div>
 <div class="paragraph">
 <p>Коли ви збережете файл та вийдете з редактора, Git поверне гілку до батька цих комітів, застосує <code>310154e</code>, потім <code>f7f3f6d</code> та зупиниться.
-Таким чином ви змінили послідовність цих комітів та повністю вилучили коміт “added cat-file”.</p>
+Таким чином ви змінили послідовність цих комітів та повністю вилучили коміт ``added cat-file''.</p>
 </div>
 </div>
 <div class="sect3">
@@ -268,7 +268,7 @@ pick f7f3f6d changed my name a bit</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Якщо замість “pick” або “edit” ви задасте “squash”, Git застосує і цю зміну, і зміну безпосередньо до неї, до того як дозволити вам злити повідомлення комітів разом.
+<p>Якщо замість <code>pick'' або </code>edit'' ви задасте ``squash'', Git застосує і цю зміну, і зміну безпосередньо до неї, до того як дозволити вам злити повідомлення комітів разом.
 Отже, якщо ви бажаєте зробити один коміт з цих трьох комітів, то треба зробити скрипт таким:</p>
 </div>
 <div class="listingblock">
@@ -305,8 +305,8 @@ added cat-file</code></pre>
 <div class="paragraph">
 <p>Розщеплення коміту скасовує коміт, а потім частково індексує та зберігає коміти стільки разів, скільки ви бажаєте створити комітів.
 Наприклад, припустімо, що ви бажаєте розщепити середній з трьох комітів.
-Замість “updated README formatting and added blame” треба зробити два коміти: перший — “updated README formatting”, та другий — “added blame”.
-Це можна зробити в скрипті <code>rebase -i</code>, якщо змінити інструкцію біля коміту, котрий треба розщепити, на “edit”:</p>
+Замість <code>updated README formatting and added blame'' треба зробити два коміти: перший — </code>updated README formatting'', та другий — <code>added blame''.
+Це можна зробити в скрипті <code>rebase -i</code>, якщо змінити інструкцію біля коміту, котрий треба розщепити, на </code>edit'':</p>
 </div>
 <div class="listingblock">
 <div class="content">
