--- a/external/book/content/book/uk/v2/Інструменти-Git-Пошук.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Пошук.html
@@ -85,7 +85,7 @@ date.c:         /* gmtime_r() in match_digit() may have clobbered it */</code></
 </div>
 <div class="paragraph">
 <p>Також можна шукати складні комбінації рядків за допомогою опції <code>--and</code>, яка надає можливість шукати декілька збігів, що мають бути в одному рядку тексту.
-Наприклад, пошукаймо рядки, що визначають константу з назвою, що містить “LINK” або “BUF_MAX”, і що мають бути в старій версії коду Git, яку позначено теґом <code>v1.8.0</code> (ми також додамо опції <code>--bread</code> та <code>--heading</code>, які допомагають розділити вивід для легшого сприйняття):</p>
+Наприклад, пошукаймо рядки, що визначають константу з назвою, що містить <code>LINK'' або </code>BUF_MAX'', і що мають бути в старій версії коду Git, яку позначено теґом <code>v1.8.0</code> (ми також додамо опції <code>--bread</code> та <code>--heading</code>, які допомагають розділити вивід для легшого сприйняття):</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -125,7 +125,7 @@ v1.8.0:zlib.c
 Команда <code>git log</code> пропонує декілька потужних інструментів для пошуку окремих комітів за змістом їх повідомлень або навіть змістом різниці, яку вони додали.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ви, наприклад, бажаєте дізнатися, коли константа <code>ZLIB_BUF_MAX</code> з’явилася, ви можете використати опцію <code>-S</code> (неформально відома під назвою “кирка” (pickaxe)), щоб попросити Git показати лише коміти, що змінили кількість входжень цього рядка.</p>
+<p>Якщо ви, наприклад, бажаєте дізнатися, коли константа <code>ZLIB_BUF_MAX</code> з’явилася, ви можете використати опцію <code>-S</code> (неформально відома під назвою ``кирка'' (pickaxe)), щоб попросити Git показати лише коміти, що змінили кількість входжень цього рядка.</p>
 </div>
 <div class="listingblock">
 <div class="content">
