--- a/external/book/content/book/uk/v2/Інструменти-Git-Підмодулі.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Підмодулі.html
@@ -45,7 +45,7 @@ url: "/book/uk/v2/Інструменти-Git-Підмодулі.html"
 <div class="paragraph">
 <p>Почнімо з додавання існуючого репозиторія Git як підмодуля репозиторія, над яким ми працюємо.
 Щоб додати новий підмодуль, використайте команду <code>git submodule add</code> з абсолютним чи відносним URL проекту, за яким ви бажаєте почати слідкувати.
-У цьому прикладі, ми додамо бібліотеку “DbConnector”.</p>
+У цьому прикладі, ми додамо бібліотеку ``DbConnector''.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -59,7 +59,7 @@ Checking connectivity... done.</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Без додаткових опцій, директорії, в які підмодулі додаються як підпроекти, називаються так само, як і репозиторій, у даному випадку “DbConnector”.
+<p>Без додаткових опцій, директорії, в які підмодулі додаються як підпроекти, називаються так само, як і репозиторій, у даному випадку ``DbConnector''.
 Ви можете додати інший шлях наприкінці команди, якщо бажаєте, щоб підмодуль додався в інше місце.</p>
 </div>
 <div class="paragraph">
@@ -281,7 +281,7 @@ Fast-forward
 </div>
 <div class="paragraph">
 <p>Тепер, якщо ви перейдете назад до головного проекту та виконаєте <code>git diff --submodule</code>, то побачите, що підмодуль було оновлено, та отримаєте список комітів, які були до нього додано.
-Якщо ви не бажаєте набирати <code>--submodule</code> щоразу при виконанні <code>git diff</code>, то можете встановити це типовим форматом, якщо встановите змінну конфігурації <code>diff.submodule</code> у значення “log”.</p>
+Якщо ви не бажаєте набирати <code>--submodule</code> щоразу при виконанні <code>git diff</code>, то можете встановити це типовим форматом, якщо встановите змінну конфігурації <code>diff.submodule</code> у значення ``log''.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -314,7 +314,7 @@ Submodule path 'DbConnector': checked out 'd0354fc054692d3906c85c3af05ddce39a1c0
 <div class="paragraph">
 <p>Без додаткових налаштувань, ця команда вважає, що ви бажаєте оновити свою копію з гілки <code>master</code> репозиторія підмодуля.
 Однак, ви можете встановити якусь іншу, якщо бажаєте.
-Наприклад, якщо ви хочете, щоб підмодуль DbConnector слідкував за гілкою “stable” свого репозиторія, ви можете задати це або у файлі <code>.gitmodules</code> (щоб всі інші також слідкували за нею), або просто в локальному файлі <code>.git/config</code>.
+Наприклад, якщо ви хочете, щоб підмодуль DbConnector слідкував за гілкою <code>`stable'' свого репозиторія, ви можете задати це або у файлі `.gitmodules</code> (щоб всі інші також слідкували за нею), або просто в локальному файлі <code>.git/config</code>.
 Установімо гілку у файлі <code>.gitmodules</code>:</p>
 </div>
 <div class="listingblock">
@@ -335,7 +335,7 @@ Submodule path 'DbConnector': checked out 'c87d55d4c6d4b05ee34fbc8cb6f7bf4585ae6
 <p>Якщо пропустити <code>-f .gitmodules</code>, команда зробить зміни лише для вас, проте напевно більш розумно зберігати цю інформацію в репозиторії, щоб усі інші робили те саме.</p>
 </div>
 <div class="paragraph">
-<p>Наразі при виконанні <code>git status</code>, Git покаже нам, що є нові коміти (“new commits”) у підмодулі.</p>
+<p>Наразі при виконанні <code>git status</code>, Git покаже нам, що є нові коміти (``new commits'') у підмодулі.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -442,8 +442,8 @@ Submodule DbConnector c3f01dc..c87d55d:
 <p>Отже, тепер розгляньмо приклад того, як можна робити зміни в підмодулях у той же час, як і в головному проекті, та зберігати й публікувати ці зміни одночасно.</p>
 </div>
 <div class="paragraph">
-<p>Досі, коли ми виконували команду <code>git submodule update</code> щоб отримати зміни з репозиторіїв підмодулів, Git брав зміни та оновлював файли у піддиректоріях, проте залишав підрепозиторії у так званому стані “відокремлений HEAD” (detached HEAD).
-Це означає, що немає локальної гілки (як “master”, наприклад), яка слідкує за змінами.
+<p>Досі, коли ми виконували команду <code>git submodule update</code> щоб отримати зміни з репозиторіїв підмодулів, Git брав зміни та оновлював файли у піддиректоріях, проте залишав підрепозиторії у так званому стані <code>відокремлений HEAD'' (detached HEAD).
+Це означає, що немає локальної гілки (як </code>master'', наприклад), яка слідкує за змінами.
 Без робочої гілки, що стежить за змінами, це означає, що навіть якщо ви збережете зміни в коміті підмодуля, ці зміни ймовірно будуть втрачені під час наступного виконання <code>git submodule update</code>.
 Вам доведеться виконати додаткові кроки, щоб за змінами в підмодулі стежили.</p>
 </div>
@@ -463,8 +463,8 @@ Switched to branch 'stable'</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Спробуймо варіант “зливати”.
-Щоб задати його вручну, можна просто додати опцію <code>--merge</code> до виклику <code>update</code>.
+<p>Спробуймо варіант <code>`зливати''.
+Щоб задати його вручну, можна просто додати опцію `--merge</code> до виклику <code>update</code>.
 Тут ми побачимо, що була зміна на сервері цього підмодуля, і її злито.</p>
 </div>
 <div class="listingblock">
@@ -578,8 +578,8 @@ Submodule DbConnector c87d55d..82d2ad3:
 </div>
 <div class="paragraph">
 <p>Щоб переконатись, що такого не станеться, ви можете попросити Git перевірити, що всі підмодулі були відповідно надіслані перед надсиланням головного проекту.
-Команда <code>git push</code> приймає аргумент <code>--recurse-submodules</code>, який можна встановити або в “check” (перевірити) або в “on-demand” (за потребою).
-Опція “check” змусить <code>push</code> просто зупинитися з помилкою, якщо будь-які збережені в підмодулі зміни не були надіслані.</p>
+Команда <code>git push</code> приймає аргумент <code>--recurse-submodules</code>, який можна встановити або в <code>check'' (перевірити) або в </code>on-demand'' (за потребою).
+Опція <code>`check'' змусить `push</code> просто зупинитися з помилкою, якщо будь-які збережені в підмодулі зміни не були надіслані.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -605,7 +605,7 @@ to push them to a remote.</code></pre>
 Якщо ви хочете, щоб усі операції <code>push</code> відбувалися з поведінкою <code>check</code>, її можна зробити типовою за допомогою <code>git config push.recurseSubmodules check</code>.</p>
 </div>
 <div class="paragraph">
-<p>Інший варіант — використати значення “on-demand”, що спробує зробити те саме за вас.</p>
+<p>Інший варіант — використати значення ``on-demand'', що спробує зробити те саме за вас.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -664,7 +664,7 @@ Automatic merge failed; fix conflicts and then commit the result.</code></pre>
 </div>
 <div class="paragraph">
 <p>Отже, по суті, сталося наступне: Git зрозумів, що дві записані точки гілок в історії підмодуля, що розійшлися, мають бути злиті.
-Це видно з “merge following commits not found” (злиття після комітів не знайдено), що важко зрозуміти, проте ми невдовзі все пояснимо.</p>
+Це видно з ``merge following commits not found'' (злиття після комітів не знайдено), що важко зрозуміти, проте ми невдовзі все пояснимо.</p>
 </div>
 <div class="paragraph">
 <p>Щоб вирішити проблему, вам треба зрозуміти, у якому стані мають бути підмодулі.
@@ -765,7 +765,7 @@ $ git commit -m "Merge Tom's Changes" <b class="conum">(5)</b>
 Він бачить, що колись у проекті підмодуля, хтось зливав гілки з цими двома комітами, отже можливо вам саме він і потрібен.</p>
 </div>
 <div class="paragraph">
-<p>Ось чому повідомлення помилки раніше було “merge following commits not found”, адже він не зміг <strong>цього</strong> зробити.
+<p>Ось чому повідомлення помилки раніше було ``merge following commits not found'', адже він не зміг <strong>цього</strong> зробити.
 Це збиває з пантелику, оскільки хто б очікував, що Git <strong>намагається</strong> це зробити?</p>
 </div>
 <div class="paragraph">
