--- a/external/book/content/book/uk/v2/Інструменти-Git-Складне-злиття.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Складне-злиття.html
@@ -46,7 +46,7 @@ url: "/book/uk/v2/Інструменти-Git-Складне-злиття.html"
 </div>
 <div class="paragraph">
 <p>Розгляньмо дуже простий приклад.
-У нас є надпростий файл Ruby, що друкує <em>hello world</em>.</p>
+У нас є надпростий файл Ruby, що друкує 'hello world'.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -61,7 +61,7 @@ hello()</code></pre>
 </div>
 <div class="paragraph">
 <p>У нашому репозиторії, ми створюємо нову гілку <code>whitespace</code> та замінюємо всі Unix символи нового рядка на варіант DOS, тобто змінюємо кожен рядок файлу, проте виключно пробільні символи.
-Потім ми змінюємо рядок “hello world” на “hello mundo”.</p>
+Потім ми змінюємо рядок <code>hello world'' на </code>hello mundo''.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -206,8 +206,8 @@ Merge made by the 'recursive' strategy.
 </div>
 <div class="paragraph">
 <p>Отримати три версії файла насправді доволі просто.
-Git зберігає кожну з цих версій в індексі під “станами” (stages), які мають пов’язані з ними номери.
-Стан 1 — це спільний предок, стан 2 — це ваша версія, а стан 3 — з `MERGE_HEAD, версія, яку ви зливаєте до себе (“їхня”, theirs)</p>
+Git зберігає кожну з цих версій в індексі під <code>станами'' (stages), які мають пов’язані з ними номери.
+Стан 1 — це спільний предок, стан 2 — це ваша версія, а стан 3 — з `MERGE_HEAD, версія, яку ви зливаєте до себе (</code>їхня'', theirs)</p>
 </div>
 <div class="paragraph">
 <p>Ви можете витягнути копію кожної з цих версій конфліктного файлу за допомогою команди <code>git show</code> зі спеціальним синтактом.</p>
@@ -419,7 +419,7 @@ hello()</code></pre>
 </div>
 <div class="paragraph">
 <p>Ви можете встановити <code>--conflict</code> значення <code>diff3</code>, або <code>merge</code> (що є типовим значенням).
-Якщо передати <code>diff3</code>, то Git використає трохи іншу версію позначок конфлікту: не тільки надасть вам “вашу” та “їхню” версії, а ще й “базову” версію до файлу, щоб надати вам більше контексту.</p>
+Якщо передати <code>diff3</code>, то Git використає трохи іншу версію позначок конфлікту: не тільки надасть вам <code>вашу'' та </code>їхню'' версії, а ще й ``базову'' версію до файлу, щоб надати вам більше контексту.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -469,7 +469,7 @@ hello()</code></pre>
 Переглянути трохи історії, щоб запам’ятати, чому два рядки розробки зачепили одну область коду, може бути дуже корисним подеколи.</p>
 </div>
 <div class="paragraph">
-<p>Щоб отримати повний список усіх унікальних комітів, що є у будь-якій з конфліктуючих гілок, можна використати синтаксис “потрійної крапки”, про який ми дізналися в <a href="{{< relurl "book/uk/v2/ch00/_triple_dot" >}}">Потрійна крапка</a>.</p>
+<p>Щоб отримати повний список усіх унікальних комітів, що є у будь-якій з конфліктуючих гілок, можна використати синтаксис ``потрійної крапки'', про який ми дізналися в <a href="{{< relurl "book/uk/v2/ch00/_triple_dot" >}}">Потрійна крапка</a>.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -532,8 +532,8 @@ index 0399cd5,59727f0..0000000
 </div>
 </div>
 <div class="paragraph">
-<p>Формат називається “Поєднана різниця” (combined diff) та видає дві колонки даних навпроти кожного рядка.
-Перша колонка показує вам, якщо рядок змінився (доданий чи вилучений) між “вашою” гілкою та файлом у робочій директорії, а друга колонка робить те саме між “їхньою” гілкою та робочою директорією.</p>
+<p>Формат називається <code>Поєднана різниця'' (combined diff) та видає дві колонки даних навпроти кожного рядка.
+Перша колонка показує вам, якщо рядок змінився (доданий чи вилучений) між </code>вашою'' гілкою та файлом у робочій директорії, а друга колонка робить те саме між ``їхньою'' гілкою та робочою директорією.</p>
 </div>
 <div class="paragraph">
 <p>Отже в цьому прикладі можна побачити, що рядки <code>&lt;&lt;&lt;&lt;&lt;&lt;&lt;</code> та <code>&gt;&gt;&gt;&gt;&gt;&gt;&gt;</code> є в робочій копії, проте їх нема в жодній зі сторін зливання.
@@ -563,7 +563,7 @@ index 0399cd5,59727f0..0000000
 </div>
 </div>
 <div class="paragraph">
-<p>Це показує нам, що “hola world” був на нашій стороні, проте не в робочій копії; “hello mundo” був на їхній стороні, проте не в робочій копії; та нарешті, “hola mundo” не був у жодній зі сторін, проте є в робочій копії.
+<p>Це показує нам, що <code>hola world'' був на нашій стороні, проте не в робочій копії; </code>hello mundo'' був на їхній стороні, проте не в робочій копії; та нарешті, ``hola mundo'' не був у жодній зі сторін, проте є в робочій копії.
 Це може бути корисним, щоб переглянути розв’язання конфлікту до створення коміту.</p>
 </div>
 <div class="paragraph">
@@ -661,7 +661,7 @@ index 0399cd5,59727f0..e1d0799
 <h4 id="_reverse_commit">Вивертання коміту</h4>
 <div class="paragraph">
 <p>Якщо переміщення вказівників гілок не спрацює для вас, Git дає ще один варіант: створити новий коміт, що скасовує всі зміни з існуючого коміту.
-Git називає цю операцію “вивертання” (revert), і в цьому конкретному випадку, треба викликати його так:</p>
+Git називає цю операцію ``вивертання'' (revert), і в цьому конкретному випадку, треба викликати його так:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -670,8 +670,8 @@ Git називає цю операцію “вивертання” (revert), і
 </div>
 </div>
 <div class="paragraph">
-<p>Опція <code>-m 1</code> вказує, який батько є “стрижневим” (mainline) та має бути збереженим.
-Якщо виконати злиття до <code>HEAD</code> (<code>git merge topic</code>), новий коміт матиме двох батьків: перший це <code>HEAD</code> (<code>C6</code>), а другий — останній коміт гілки, яку ви зливаєте (<code>C4</code>).
+<p>Опція <code>-m 1</code> вказує, який батько є <code>`стрижневим'' (mainline) та має бути збереженим.
+Якщо виконати злиття до `HEAD</code> (<code>git merge topic</code>), новий коміт матиме двох батьків: перший це <code>HEAD</code> (<code>C6</code>), а другий — останній коміт гілки, яку ви зливаєте (<code>C4</code>).
 У даному випадку, ми бажаємо скасувати всі зміни, спричинені у батьку #2 (<code>C4</code>), проте зберігти весь зміст з батька #1 (<code>C6</code>).</p>
 </div>
 <div class="paragraph">
@@ -729,15 +729,15 @@ $ git merge topic</code></pre>
 <div class="sect3">
 <h3 id="_інші_типи_зливань">Інші типи зливань</h3>
 <div class="paragraph">
-<p>Досі ми розглядали нормальні злиття двох гілок, що зазвичай обробляються тим, що називається стратегією злиття “recursive”.
+<p>Досі ми розглядали нормальні злиття двох гілок, що зазвичай обробляються тим, що називається стратегією злиття ``recursive''.
 Одначе, існують й інші методи зливати гілки разом.
 Швидко розгляньмо декілька з них.</p>
 </div>
 <div class="sect4">
 <h4 id="_перевага_нашого_чи_їхнього">Перевага нашого чи їхнього</h4>
 <div class="paragraph">
-<p>Почнімо з додаткових можливостей звичайного режиму зливання “recursive”.
-Ми вже зустрічали опції <code>ignore-all-space</code> та <code>ignore-space-change</code>, які передаються до <code>-X</code>, проте ми також можемо сказати Git надавати перевагу одній чи іншій стороні, коли він бачить конфлікт.</p>
+<p>Почнімо з додаткових можливостей звичайного режиму зливання <code>`recursive''.
+Ми вже зустрічали опції `ignore-all-space</code> та <code>ignore-space-change</code>, які передаються до <code>-X</code>, проте ми також можемо сказати Git надавати перевагу одній чи іншій стороні, коли він бачить конфлікт.</p>
 </div>
 <div class="paragraph">
 <p>Без додаткових опцій, коли Git бачить конфлікт між двома гілками при зливанні, він додасть позначки конфлікту до вашого коду та позначить файл конфліктним, та дасть вам його розв’язати.
@@ -749,7 +749,7 @@ $ git merge topic</code></pre>
 Для будь-яких конфліктуючих змін, Git просто вибере сторону, яку ви задали, включно з двійковими файлами.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ми повернемося до попереднього прикладу “hello world”, ми можемо бачити, що зливання нашої гілки призводить до конфліктів.</p>
+<p>Якщо ми повернемося до попереднього прикладу ``hello world'', ми можемо бачити, що зливання нашої гілки призводить до конфліктів.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -775,15 +775,15 @@ Merge made by the 'recursive' strategy.
 </div>
 </div>
 <div class="paragraph">
-<p>У даному випадку, замість отримання позначок конфлікту у файлі з “hello mundo” з одного боку та “hola world” з іншого, Git просто обере “hola world”.
+<p>У даному випадку, замість отримання позначок конфлікту у файлі з <code>hello mundo'' з одного боку та </code>hola world'' з іншого, Git просто обере ``hola world''.
 Однак, усі інші неконфліктуючі зміни на цій гілці успішно злиті.</p>
 </div>
 <div class="paragraph">
 <p>Цю опцію також можна передати команді <code>git merge-file</code>, яку ми бачили раніше, наприклад виконавши <code>git merge-file --ours</code> для окремих зливань файлів.</p>
 </div>
 <div class="paragraph">
-<p>Якщо вам потрібно щось схоже, проте щоб Git навіть не намагався зливати зміни з іншої сторони, є більш драконівська опція, а саме <em>стратегія</em> злиття “ours”.
-Це не те саме, що <em>опція</em> рекурсивного (recursive) злиття “ours”.</p>
+<p>Якщо вам потрібно щось схоже, проте щоб Git навіть не намагався зливати зміни з іншої сторони, є більш драконівська опція, а саме <em>стратегія</em> злиття <code>ours''.
+Це не те саме, що <em>опція</em> рекурсивного (recursive) злиття </code>ours''.</p>
 </div>
 <div class="paragraph">
 <p>Це фактично зробить підроблене злиття.
