--- a/external/book/content/book/uk/v2/Інструменти-Git-Усвідомлення-скидання-reset.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Усвідомлення-скидання-reset.html
@@ -29,7 +29,7 @@ url: "/book/uk/v2/Інструменти-Git-Усвідомлення-скида
 <h3 id="_три_дерева">Три дерева</h3>
 <div class="paragraph">
 <p>Набагато легше зрозуміти <code>reset</code> та <code>checkout</code>, якщо уявити, що Git керує вмістом трьох різних дерев.
-“Деревом” ми тут називатимемо “колекцію файлів”, а не саме структуру даних.
+<code>Деревом'' ми тут називатимемо </code>колекцію файлів'', а не саме структуру даних.
 (Є декілька випадків, в яких індекс насправді не поводиться як дерево, проте легше поки що уявляти його так.)</p>
 </div>
 <div class="paragraph">
@@ -95,7 +95,7 @@ $ git ls-tree -r HEAD
 <h4 id="_the_index">Індекс</h4>
 <div class="paragraph">
 <p>Індекс — це <strong>пропозиція наступного коміту</strong>.
-Ця концепція Git також має назву “Область Додавання”, адже саме сюди дивиться Git при виконанні <code>git commit</code>.</p>
+Ця концепція Git також має назву <code>`Область Додавання'', адже саме сюди дивиться Git при виконанні `git commit</code>.</p>
 </div>
 <div class="paragraph">
 <p>Git заповнює цей індекс списком усього вмісту файлів, що був отриманий зі сховища до вашої робочої теки востаннє та яким він тоді був.
@@ -191,8 +191,8 @@ $ git ls-tree -r HEAD
 </div>
 </div>
 <div class="paragraph">
-<p>Якщо ми зараз виконаємо <code>git status</code>, то побачимо файл червоним у “Changes not staged for commit”, адже в цього елемента є різниця між Індексом та Робочою Директорією.
-Далі виконуємо <code>git add</code> на ньому, щоб додати його до Індекса.</p>
+<p>Якщо ми зараз виконаємо <code>git status</code>, то побачимо файл червоним у <code>`Changes not staged for commit'', адже в цього елемента є різниця між Індексом та Робочою Директорією.
+Далі виконуємо `git add</code> на ньому, щоб додати його до Індекса.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -200,8 +200,8 @@ $ git ls-tree -r HEAD
 </div>
 </div>
 <div class="paragraph">
-<p>Тепер, якщо ми виконаємо <code>git status</code>, то побачимо файл зеленим під “Changes to be commited”, адже Індекс та HEAD різняться — тобто, наш пропонований наступний коміт зараз відрізняється від останнього коміту.
-Нарешті, виконуємо <code>git commit</code> щоб завершити коміт.</p>
+<p>Тепер, якщо ми виконаємо <code>git status</code>, то побачимо файл зеленим під <code>`Changes to be commited'', адже Індекс та HEAD різняться — тобто, наш пропонований наступний коміт зараз відрізняється від останнього коміту.
+Нарешті, виконуємо `git commit</code> щоб завершити коміт.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -365,8 +365,8 @@ $ git ls-tree -r HEAD
 (Докладніше в <a href="{{< relurl "book/uk/v2/ch00/_unstaging" >}}">Вилучання файла з індексу</a>.)</p>
 </div>
 <div class="paragraph">
-<p>Ми могли б так же легко не давати Git припускати, що ми маємо на увазі “візьми дані з HEAD”, якби б задали окремий коміт, з якого треба брати версію.
-Ми могли просто виконати щось на кшталт <code>git reset eb43bf file.txt</code>.</p>
+<p>Ми могли б так же легко не давати Git припускати, що ми маємо на увазі <code>`візьми дані з HEAD'', якби б задали окремий коміт, з якого треба брати версію.
+Ми могли просто виконати щось на кшталт `git reset eb43bf file.txt</code>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -388,8 +388,8 @@ $ git ls-tree -r HEAD
 <p>Подивімося на те, як можна зробити щось цікаве цією винайденою можливістю — зварювання комітів.</p>
 </div>
 <div class="paragraph">
-<p>Припустімо у вас є послідовність комітів з повідомленнями “oops.”, “WIP” та “forgot this file” (забув цей файл).
-Ви можете використати <code>reset</code> щоб швидко та легко зварити їх в один коміт, що дозволяє вам виглядати дійсно витонченим.
+<p>Припустімо у вас є послідовність комітів з повідомленнями <code>oops.'', </code>WIP'' та <code>`forgot this file'' (забув цей файл).
+Ви можете використати `reset</code> щоб швидко та легко зварити їх в один коміт, що дозволяє вам виглядати дійсно витонченим.
 (У <a href="{{< relurl "book/uk/v2/ch00/_squashing" >}}">Зварювання комітів</a> йдеться про інший спосіб це зробити, проте в даному випадку легше скористатися <code>reset</code>.)</p>
 </div>
 <div class="paragraph">
@@ -477,8 +477,8 @@ HEAD почне вказувати на <code>master</code>.</p>
 </div>
 <div class="paragraph">
 <p>Ось шпаргалка щодо того, як команди впливають на які дерева.
-Колонка “HEAD” має значення “ПОС” (посилання), якщо переміщує посилання (гілку), на яке вказує HEAD, або “HEAD”, якщо переміщує сам HEAD.
-Приділить особливу увагу колонці <em>РД у Безпеці?</em> (РД - робоча директорія) — якщо в ній <strong>НІ</strong>, двічі поміркуйте перш ніж виконати команду.</p>
+Колонка <code>HEAD'' має значення </code>ПОС'' (посилання), якщо переміщує посилання (гілку), на яке вказує HEAD, або ``HEAD'', якщо переміщує сам HEAD.
+Приділить особливу увагу колонці 'РД у Безпеці?' (РД - робоча директорія) — якщо в ній <strong>НІ</strong>, двічі поміркуйте перш ніж виконати команду.</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
