--- a/external/book/content/book/uk/v2/Інструменти-Git-Ховання-та-чищення.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Ховання-та-чищення.html
@@ -287,10 +287,10 @@ Dropped refs/stash@{0} (29d385a81d163dfd45a452a2ce816487a6b8b014)</code></pre>
 <div class="paragraph">
 <p>Якщо ж ви хочете видалити непотрібні файли, або очистити свою робочу директорію, то це може зробити команда <code>git clean</code>.
 Щоб видалити всі не супроводжувані файли в робочій директорії, виконайте <code>git clean -f -d</code>, що видаляє будь-які файли та піддиректорії, які в результаті стають порожніми.
-Опція <code>-f</code> означає <em>force</em> (змусити) або "дійсно зроби це".</p>
+Опція <code>-f</code> означає 'force' (змусити) або "дійсно зроби це".</p>
 </div>
 <div class="paragraph">
-<p>Якщо вам більш до вподоби бачити, що ви робите, ви можете виконати цю команду з опцією <code>-n</code>, що означає “нічого не видаляй та скажи мені що <em>б</em> ти видалив”.</p>
+<p>Якщо вам більш до вподоби бачити, що ви робите, ви можете виконати цю команду з опцією <code>-n</code>, що означає ``нічого не видаляй та скажи мені що <em>б</em> ти видалив''.</p>
 </div>
 <div class="listingblock">
 <div class="content">
