--- a/external/book/content/book/uk/v2/Вступ-Інсталяція-Git.html
+++ b/external/book/content/book/uk/v2/Вступ-Інсталяція-Git.html
@@ -70,7 +70,7 @@ Git досить добре зберігає зворотну сумісніст
 <p>
 Є декілька способів установки Git на Mac.
 Найпростіше, встановити Xcode Command Line Tools.
-На Mavericks (10.9) або вище, ви можете зробити це просто перший раз виконавши <em>git</em> з терміналу.</p>
+На Mavericks (10.9) або вище, ви можете зробити це просто перший раз виконавши 'git' з терміналу.</p>
 </div>
 <div class="listingblock">
 <div class="content">
