--- a/external/book/content/book/uk/v2/Вступ-Про-систему-контролю-версій.html
+++ b/external/book/content/book/uk/v2/Вступ-Про-систему-контролю-версій.html
@@ -24,7 +24,7 @@ url: "/book/uk/v2/Вступ-Про-систему-контролю-версій
 <h2 id="_про_систему_контролю_версій">Про систему контролю версій</h2>
 <div class="paragraph">
 <p>
-Що таке “система контролю версій”, і чому це важливо?
+Що таке ``система контролю версій'', і чому це важливо?
 Система контролю версій - це система, що записує зміни у файл або набір файлів протягом деякого часу, так що ви зможете повернутися до певної версії пізнише.
 Як приклад, в цій книзі, для файлів, що знаходяться під контролем версій, буде використовуватися код програмного забезпечення, хоча насправді ви можете використовувати контроль версій практично для будь-яких типів файлів.</p>
 </div>
