--- a/external/book/content/book/uk/v2/Вступ-Три-стани.html
+++ b/external/book/content/book/uk/v2/Вступ-Три-стани.html
@@ -55,7 +55,7 @@ Git має три основних стани, в яких можуть пере
 </div>
 <div class="paragraph">
 <p>Індекс — це файл, що зазвичай знаходиться в директорії Git і містить інформацію про те, що буде збережено у наступному коміті.
-Також цей файл називають “областю додавання” (staging area), проте ми переважно будемо користуватись технічним терміном Git “індекс”.</p>
+Також цей файл називають <code>областю додавання'' (staging area), проте ми переважно будемо користуватись технічним терміном Git </code>індекс''.</p>
 </div>
 <div class="paragraph">
 <p>Найпростіший процес взаємодії з Git виглядає приблизно так:</p>
