--- a/external/book/content/book/uk/v2/Галуження-в-git-Віддалені-гілки.html
+++ b/external/book/content/book/uk/v2/Галуження-в-git-Віддалені-гілки.html
@@ -47,10 +47,10 @@ url: "/book/uk/v2/Галуження-в-git-Віддалені-гілки.html"
 <div class="title">Зауваження</div>
 </td>
 <td class="content">
-<div class="title">“origin” не є особливим</div>
+<div class="title">``origin'' не є особливим</div>
 <div class="paragraph">
-<p>Так само, як назва гілки “master” не має якогось особливого значення для Git, так само й “origin”.
-Просто “master” дається за-замовчуванням для початкової гілки, коли ви запускаєте <code>git init</code> — ось чому воно так часто зустрічається, а “origin” — це ім’я за-замовчуванням для віддалених посилань команди <code>git clone</code>.
+<p>Так само, як назва гілки <code>master'' не має якогось особливого значення для Git, так само й </code>origin''.
+Просто <code>master'' дається за-замовчуванням для початкової гілки, коли ви запускаєте <code>git init</code> — ось чому воно так часто зустрічається, а </code>origin'' — це ім’я за-замовчуванням для віддалених посилань команди <code>git clone</code>.
 Якщо ж ви, натомість, виконаєте <code>git clone -o booyah</code>, то отримаєте <code>booyah/master</code> своєю гілкою за-замовчуванням.</p>
 </div>
 </td>
@@ -75,7 +75,7 @@ url: "/book/uk/v2/Галуження-в-git-Віддалені-гілки.html"
 </div>
 <div class="paragraph">
 <p>Щоб відновити синхронність, виконайте команду <code>git fetch origin</code>.
-Ця команда шукає який сервер відповідає імені “origin” (у нашому випадку <code>git.ourcompany.com</code>), отримує дані, яких ви ще не маєте і оновлює вашу локальну базу даних, переміщаючи вказівник <code>origin/master</code> на нову, більш актуальну, позицію.</p>
+Ця команда шукає який сервер відповідає імені <code>`origin'' (у нашому випадку `git.ourcompany.com</code>), отримує дані, яких ви ще не маєте і оновлює вашу локальну базу даних, переміщаючи вказівник <code>origin/master</code> на нову, більш актуальну, позицію.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -132,9 +132,9 @@ To https://github.com/schacon/simplegit
 </div>
 <div class="paragraph">
 <p>Це трохи скорочено.
-Git автоматично замінює назву гілки <code>serverfix</code> з <code>refs/heads/serverfix:refs/heads/serverfix</code>, що означає “Візьми мою локальну гілку serverfix та надішли її для оновлення віддаленої гілки serverfix.”
+Git автоматично замінює назву гілки <code>serverfix</code> з <code>refs/heads/serverfix:refs/heads/serverfix</code>, що означає <code>Візьми мою локальну гілку serverfix та надішли її для оновлення віддаленої гілки serverfix.''
 Ми детальніше розглянемо <code>refs/heads/</code> в <a href="{{< relurl "book/uk/v2/ch00/ch10-git-internals" >}}">Git зсередини</a>, але, взагалі, можете зараз це пропустити.
-Також ви можете виконати <code>git push origin serverfix:serverfix</code>, що зробить те саме, тобто скаже “Бери мій serverfix та шли на віддалений serverfix.”
+Також ви можете виконати <code>git push origin serverfix:serverfix</code>, що зробить те саме, тобто скаже </code>Бери мій serverfix та шли на віддалений serverfix.''
 Користуйтеся таким підходом щоб надсилати локальні гілки, що називаються інакше ніж віддалені.
 Якщо ви не хочете мати віддалену назву <code>serverfix</code>, виконайте натомість <code>git push origin serverfix:awesomebranch</code>, щоб надіслати локальну <code>serverfix</code> на віддалену з назвою <code>awesomebranch</code>.</p>
 </div>
@@ -151,8 +151,8 @@ Git автоматично замінює назву гілки <code>serverfix<
 За замовчуванням Git питатиме вас цю інформацію в терміналі для того, щоб перевірити правомірність надсилання змін.</p>
 </div>
 <div class="paragraph">
-<p>Щоб не вводити це щоразу, налаштуйте “credential cache”.
-Найпростіше — дозволити тримати цю інформацію в пам’яті протягом кількох хвилин, для чого виконайте <code>git config --global credential.helper cache</code>.</p>
+<p>Щоб не вводити це щоразу, налаштуйте <code>`credential cache''.
+Найпростіше — дозволити тримати цю інформацію в пам’яті протягом кількох хвилин, для чого виконайте `git config --global credential.helper cache</code>.</p>
 </div>
 <div class="paragraph">
 <p>Більше інформації про способи кешування ідентифікації користувачів у секції <a href="{{< relurl "book/uk/v2/ch00/_credential_caching" >}}">Збереження посвідчення (credential)</a>.</p>
@@ -198,7 +198,7 @@ Switched to a new branch 'serverfix'</code></pre>
 <h3 id="_tracking_branches">Відслідковувані гілки</h3>
 <div class="paragraph">
 <p>
-Перемикання на локальну гілку з віддалено-відслідковуваної автоматично створює так звану відслідковувану гілку “tracking branch” (а гілка, за якою вона стежить називається “upstream branch”).
+Перемикання на локальну гілку з віддалено-відслідковуваної автоматично створює так звану відслідковувану гілку <code>tracking branch'' (а гілка, за якою вона стежить називається </code>upstream branch'').
 Відслідковувані гілки — це локальні гілки, що мають безпосередній зв’язок з віддаленою гілкою.
 Якщо ви знаходитеся на відслідковуваній гілці і потягнете зміни, виконуючи <code>git pull</code>, Git відразу знатиме з якого сервера брати та з якої гілки зливати зміни.</p>
 </div>
@@ -277,8 +277,8 @@ Branch serverfix set up to track remote branch serverfix from origin.</code></pr
 </div>
 </div>
 <div class="paragraph">
-<p>Тут ми бачимо, що гілка <code>iss53</code> слідкує за <code>origin/iss53</code> та випереджає її (“ahead”) на два, тобто ми маємо локально два коміти, які ще не надіслані на сервер.
-Також ми бачимо, що <code>master</code> слідкує за <code>origin/master</code> та її стан є актуальним.
+<p>Тут ми бачимо, що гілка <code>iss53</code> слідкує за <code>origin/iss53</code> та випереджає її (<code>`ahead'') на два, тобто ми маємо локально два коміти, які ще не надіслані на сервер.
+Також ми бачимо, що `master</code> слідкує за <code>origin/master</code> та її стан є актуальним.
 Далі бачимо, що <code>serverfix</code> слідкує за гілкою <code>server-fix-good</code> з сервера <code>teamone</code> та випереджає його на три й відстає на один, тобто існує один коміт на сервері, який ми ще не злили та три коміти локально, які ми ще не надіслали.
 Насамкінець бачимо, що локальна гілка <code>testing</code> не слідкує за жодною віддаленою.</p>
 </div>
