--- a/external/book/content/book/uk/v2/Галуження-в-git-Гілки-у-кількох-словах.html
+++ b/external/book/content/book/uk/v2/Галуження-в-git-Гілки-у-кількох-словах.html
@@ -83,9 +83,9 @@ $ git commit -m 'The initial commit of my project'</code></pre>
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Гілка “master” у Git не має нічого особливого.
+<p>Гілка <code>`master'' у Git не має нічого особливого.
 Вона нічим не відрізняється від інших.
-Єдина причина, чому майже кожне сховище має таку гілку — команда <code>git init</code> автоматично її створює, і більшість людей не мають клопоту змінити її.</p>
+Єдина причина, чому майже кожне сховище має таку гілку — команда `git init</code> автоматично її створює, і більшість людей не мають клопоту змінити її.</p>
 </div>
 </td>
 </tr>
@@ -147,7 +147,7 @@ f30ab (HEAD -&gt; master, testing) add feature #32 - ability to add new formats 
 </div>
 </div>
 <div class="paragraph">
-<p>Як бачите, гілки “master” та “testing” прямо поруч з фіксацією <code>f30ab</code>.</p>
+<p>Як бачите, гілки <code>master'' та </code>testing'' прямо поруч з фіксацією <code>f30ab</code>.</p>
 </div>
 </div>
 <div class="sect3">
