--- a/external/book/content/book/uk/v2/Галуження-в-git-Основи-галуження-та-зливання.html
+++ b/external/book/content/book/uk/v2/Галуження-в-git-Основи-галуження-та-зливання.html
@@ -168,9 +168,9 @@ Fast-forward
 </div>
 </div>
 <div class="paragraph">
-<p>Зверніть увагу на фразу “fast-forward” у цьому злитті.
+<p>Зверніть увагу на фразу <code>fast-forward'' у цьому злитті.
 Через те, що коміт <code>C4</code>, який зливався, належав гілці <code>hotfix</code>, що була безпосередньо попереду поточного коміту <code>C2</code>, Git просто переміщує вказівник вперед.
-Іншими словами, коли ви зливаєте один коміт з іншим, і це можна досягнути слідуючи історії першого коміту, Git просто переставляє вказівник, оскільки немає змін-відмінностей, які потрібно зливати разом - це називається “перемоткою” (“fast-forward”).</p>
+Іншими словами, коли ви зливаєте один коміт з іншим, і це можна досягнути слідуючи історії першого коміту, Git просто переставляє вказівник, оскільки немає змін-відмінностей, які потрібно зливати разом - це називається </code>перемоткою'' (``fast-forward'').</p>
 </div>
 <div class="paragraph">
 <p>Тепер ваша зміна міститься в знімку коміту, на який вказує <code>master</code> і ви можете викладати зміни.</p>
@@ -360,7 +360,7 @@ Hit return to start merge resolution tool (opendiff):</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Для того, щоб використовувати інструмент-програму іншу, ніж по-замовчуванню (Git обрав <code>opendiff</code>, оскільки команду було запущено з Mac), подивіться на список сумісних зверху одразу після “one of the following tools.”
+<p>Для того, щоб використовувати інструмент-програму іншу, ніж по-замовчуванню (Git обрав <code>opendiff</code>, оскільки команду було запущено з Mac), подивіться на список сумісних зверху одразу після ``one of the following tools.''
 Просто введіть ім’я потрібного інструменту.</p>
 </div>
 <div class="admonitionblock note">
