--- a/external/book/content/book/uk/v2/Галуження-в-git-Перебазовування.html
+++ b/external/book/content/book/uk/v2/Галуження-в-git-Перебазовування.html
@@ -126,7 +126,7 @@ $ git merge experiment</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Що означає “Візьми гілку <code>client</code>, знайди всі латки, відколи вона відгалузилася від гілки <code>server</code>, та відтвори їх у гілці <code>client</code>, ніби вона насправді базувалася на гілці <code>master</code>.”
+<p>Що означає <code>`Візьми гілку `client</code>, знайди всі латки, відколи вона відгалузилася від гілки <code>server</code>, та відтвори їх у гілці <code>client</code>, ніби вона насправді базувалася на гілці <code>master</code>.''
 Це трохи складно, але результат доволі класний.</p>
 </div>
 <div class="imageblock">
@@ -266,7 +266,7 @@ $ git branch -d server</code></pre>
 </div>
 <div class="paragraph">
 <p>Виявляється, що крім контрольної SHA-1 суми коміту Git також вираховує контрольну суму, що базується на латці (patch), спричиненою комітом.
-Вона називається “patch-id”.</p>
+Вона називається ``patch-id''.</p>
 </div>
 <div class="paragraph">
 <p>Якщо ви візьмете роботу, що була перетертою, та перебазуєте її поверх нових комітів ваших колег, Git часто може сам розібратися що є унікально вашим та застосувати це поверху нової гілки.</p>
