--- a/external/book/content/book/uk/v2/Додаток-A:-Git-в-інших-середовищах-Git-у-Powershell.html
+++ b/external/book/content/book/uk/v2/Додаток-A:-Git-в-інших-середовищах-Git-у-Powershell.html
@@ -38,8 +38,8 @@ url: "/book/uk/v2/Додаток-A:-Git-в-інших-середовищах-Git
 <h4 id="_перед_запуском">Перед запуском</h4>
 <div class="paragraph">
 <p>Перед використанням скриптів PowerShell вам потрібно встановити локальний <code>ExecutionPolicy</code> у значення <code>RemoteSigned</code> (взагалі-то будь-яке значення крім <code>Undefined</code> чи <code>Restricted</code>). Якщо вибрати <code>AllSigned</code> замість <code>RemoteSigned</code>, то й локальні скрипти (тобто ваші власні) потребуватимуть підпису, щоб бути виконаними. У випадку <code>RemoteSigned</code>, лише скрипти, що в них <code>ZoneIdentifief</code> встановлено у <code>Internet</code> (тобто вони були завантажені з мережі) матимуть бути з підписом, решта — ні.
-Якщо ви адміністратор і бажаєте встановити це значення для всіх користувачів на машині, використайте "<code>-Scope LocalMachine</code>".
-Якщо ви звичайний користувач без прав адміністратора, використайте "<code>-Scope CurrentUser</code>", щоб це налаштування стосувалося лише вас.
+Якщо ви адміністратор і бажаєте встановити це значення для всіх користувачів на машині, використайте “-Scope LocalMachine”.
+Якщо ви звичайний користувач без прав адміністратора, використайте “-Scope CurrentUser”, щоб це налаштування стосувалося лише вас.
 Докладніше про <code>PowerShell Scopes</code>: (<a href="https://technet.microsoft.com/de-de/library/hh847849.aspx" class="bare">https://technet.microsoft.com/de-de/library/hh847849.aspx</a>)
 Докладніше про <code>PowerShell ExecutionPolicy</code>: (<a href="https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.security/set-executionpolicy" class="bare">https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.security/set-executionpolicy</a>)</p>
 </div>
@@ -62,7 +62,7 @@ url: "/book/uk/v2/Додаток-A:-Git-в-інших-середовищах-Git
 </div>
 </div>
 <div class="paragraph">
-<p>Якщо ви хочете встановити Posh-Git лише для поточного користувача, а не глобально, використайте натомість "<code>-Scope CurrentUser</code>".</p>
+<p>Якщо ви хочете встановити Posh-Git лише для поточного користувача, а не глобально, використайте натомість “-Scope CurrentUser”.</p>
 </div>
 </div>
 <div class="sect4">
