--- a/external/book/content/book/uk/v2/Додаток-B:-Вбудовування-Git-у-ваші-застосунки-JGit.html
+++ b/external/book/content/book/uk/v2/Додаток-B:-Вбудовування-Git-у-ваші-застосунки-JGit.html
@@ -123,7 +123,7 @@ String name = cfg.getString("user", null, "name");</code></pre>
 <p>Перший рядок отримує вказівник на посилання <code>master</code>.
 JGit автоматично бере <em>справжнє</em> посилання master, яке знаходиться в <code>refs/heads/master</code>, та повертає обʼєкт, який дозволяє вам отримувати інформацію про посилання.
 Ви можете отримати назву (<code>.getName()</code>), та чи цільовий обʼєкт прямого посилання (<code>.getObjectId()</code>), чи посилання, на яке вказує символічне посилання (<code>.getTarget()</code>).
-Обʼєкти посилань також використовуються для представлення посилань та обʼєктів теґів, отже ви можете спитати, чи “очищено” теґ, тобто чи вказує він на фінальну ціль (можливо довгого) рядку обʼєкту теґу.</p>
+Обʼєкти посилань також використовуються для представлення посилань та обʼєктів теґів, отже ви можете спитати, чи ``очищено'' теґ, тобто чи вказує він на фінальну ціль (можливо довгого) рядку обʼєкту теґу.</p>
 </div>
 <div class="paragraph">
 <p>Другий рядок отримує ціль посилання <code>master</code>, яке повернено як примірник ObjectId.
