--- a/external/book/content/book/uk/v2/Додаток-B:-Вбудовування-Git-у-ваші-застосунки-Libgit2.html
+++ b/external/book/content/book/uk/v2/Додаток-B:-Вбудовування-Git-у-ваші-застосунки-Libgit2.html
@@ -60,7 +60,7 @@ git_repository_free(repo);</code></pre>
 <div class="paragraph">
 <p>Другий шматок коду використовує синтаксис rev-parse (докладніше в <a href="{{< relurl "book/uk/v2/ch00/_branch_references" >}}">Гілкові посилання</a>), щоб отримати коміт, на який врешті-решт вказує HEAD.
 Результуючий тип — вказівник на <code>git_object</code>, який відповідає чомусь, що існує в базі даних обʼєків Git в репозиторії.
-<code>git_object</code> насправді є “батьківським” типом для декількох різних типів обʼєктів; розташування памʼяті для кожного з типів “нащадків” такий саме, як для <code>git_object</code>, щоб ви могли безпечно проводити до правильного.
+<code>git_object</code> насправді є <code>батьківським'' типом для декількох різних типів обʼєктів; розташування памʼяті для кожного з типів </code>нащадків'' такий саме, як для <code>git_object</code>, щоб ви могли безпечно проводити до правильного.
 У даному випадку, <code>git_object_type(commit)</code> має повернути <code>GIT_OBJ_COMMIT</code>, отже його безпечно приводити до вказівника на <code>git_commit</code>.</p>
 </div>
 <div class="paragraph">
