--- a/external/book/content/book/uk/v2/Додаток-C:-Команди-Git-Базове-збереження-відбитків.html
+++ b/external/book/content/book/uk/v2/Додаток-C:-Команди-Git-Базове-збереження-відбитків.html
@@ -70,7 +70,7 @@ url: "/book/uk/v2/Додаток-C:-Команди-Git-Базове-збереж
 <p>Ми використовуємо її, щоб побачити можливі проблеми з пробільними символами перед створенням коміту за допомогою опції <code>--check</code> у <a href="{{< relurl "book/uk/v2/ch00/_commit_guidelines" >}}">Правила щодо комітів</a>.</p>
 </div>
 <div class="paragraph">
-<p>Ми бачимо як перевірити різницю між гілками ефективніше за допомогою синтаксису <code>git diff A...B</code> у <a href="{{< relurl "book/uk/v2/ch00/_what_is_introduced" >}}">Як дізнатися, що додано</a>.</p>
+<p>Ми бачимо як перевірити різницю між гілками ефективніше за допомогою синтаксису <code>git diff A…​B</code> у <a href="{{< relurl "book/uk/v2/ch00/_what_is_introduced" >}}">Як дізнатися, що додано</a>.</p>
 </div>
 <div class="paragraph">
 <p>Ми дізнаємось, як ігнорувати різницю в пробільних символах за допомогою <code>-b</code> та як порівняти стани конфліктних файлів за допомогою <code>--theirs</code>, <code>--ours</code> та <code>--base</code> у <a href="{{< relurl "book/uk/v2/ch00/_advanced_merging" >}}">Складне злиття</a>.</p>
