--- a/external/book/content/book/uk/v2/Налаштування-Git-Атрибути-Git.html
+++ b/external/book/content/book/uk/v2/Налаштування-Git-Атрибути-Git.html
@@ -88,8 +88,8 @@ Binary files a/chapter1.docx and b/chapter1.docx differ</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Це означає, що для будь-якого файлу, що відповідає шаблону (<code>.docx</code>), Git має використати фільтр “word”, коли ви намагаєтесь продивитись різницю, яка містить зміни.
-Що це за фільтр “word”?
+<p>Це означає, що для будь-якого файлу, що відповідає шаблону (<code>.docx</code>), Git має використати фільтр <code>word'', коли ви намагаєтесь продивитись різницю, яка містить зміни.
+Що це за фільтр </code>word''?
 Вам доведеться його налаштувати.
 Тут ви зробите так, щоб Git використовував програму <code>docx2txt</code> для перетворення документів Word на читабельні текстові файли, які він потім відповідно порівняє.</p>
 </div>
@@ -115,7 +115,7 @@ docx2txt.pl "$1" -</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Тепер Git знає, що якщо йому треба порівняти два відбитки, та якийсь з них закінчується на <code>.docx</code>, то Git має передати ці два файли фільтру “word”, який визначено як програму <code>docx2txt</code>.
+<p>Тепер Git знає, що якщо йому треба порівняти два відбитки, та якийсь з них закінчується на <code>.docx</code>, то Git має передати ці два файли фільтру <code>`word'', який визначено як програму `docx2txt</code>.
 Це призводить до гарних текстових версій ваших файлів Word перед спробами порівняти їх.</p>
 </div>
 <div class="paragraph">
@@ -141,7 +141,7 @@ index 0b013ca..ba25db5 100644
 </div>
 </div>
 <div class="paragraph">
-<p>Git успішно та стисло доповідає нам, що ми додали рядок “Testing: 1, 2, 3.”, як і було насправді.
+<p>Git успішно та стисло доповідає нам, що ми додали рядок ``Testing: 1, 2, 3.'', як і було насправді.
 Це не ідеально – зміни формату тут не буде показано – проте це безперечно працює.</p>
 </div>
 <div class="paragraph">
@@ -238,25 +238,25 @@ $Id: 42812b7653c7b88933f8a9d6cad0ca16714b9bb3 $</code></pre>
 </div>
 <div class="paragraph">
 <p>Виявляється, ви можете написати свої власні фільтри, щоб робити заміни при отриманні/збереженні в коміті файлів.
-Вони називаються фільтри <code>clean'' та ``smudge''.
-У файлі `.gitattributes</code> ви можете задати фільтр для окремих шляхів, а потім налаштувати скрипти, які оброблятимуть файли перед отриманням (“smudge”, дивіться <a href="{{< relurl "book/uk/v2/ch00/filters_a" >}}">Фільтр “smudge” виконується під час отримання.</a>) та перед індексуванням (“clean”, дивіться <a href="{{< relurl "book/uk/v2/ch00/filters_b" >}}">Фільтр “clean” виконується, коли зміни індексуються.</a>).
+Вони називаються фільтри <code>clean'' та <code>smudge''.
+У файлі `.gitattributes</code> ви можете задати фільтр для окремих шляхів, а потім налаштувати скрипти, які оброблятимуть файли перед отриманням (</code>smudge'', дивіться <a href="{{< relurl "book/uk/v2/ch00/filters_a" >}}">Фільтр ``smudge'' виконується під час отримання.</a>) та перед індексуванням (``clean'', дивіться <a href="{{< relurl "book/uk/v2/ch00/filters_b" >}}">Фільтр ``clean'' виконується, коли зміни індексуються.</a>).
 Ці фільтри можуть робити всілякі втішні речі.</p>
 </div>
 <div id="filters_a" class="imageblock">
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/smudge.png" >}}" alt="Фільтр ``smudge'' виконується під час отримання.">
 </div>
-<div class="title">Рисунок 143. Фільтр “smudge” виконується під час отримання.</div>
+<div class="title">Рисунок 143. Фільтр ``smudge'' виконується під час отримання.</div>
 </div>
 <div id="filters_b" class="imageblock">
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/clean.png" >}}" alt="Фільтр ``clean'' виконується" width="коли зміни індексуються.">
 </div>
-<div class="title">Рисунок 144. Фільтр “clean” виконується, коли зміни індексуються.</div>
+<div class="title">Рисунок 144. Фільтр ``clean'' виконується, коли зміни індексуються.</div>
 </div>
 <div class="paragraph">
 <p>В оригінальному повідомленні коміту з цією функцією міститься простий приклад виконання програми <code>indent</code> на всьому вашому коді C перед збереженням коміту.
-Щоб це зробити, треба встановити атрибут filter у файлі <code>.gitattributes</code> для файлів <code>*.c</code> у значення “indent”:</p>
+Щоб це зробити, треба встановити атрибут filter у файлі <code>.gitattributes</code> для файлів <code>*.c</code> у значення ``indent'':</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -264,7 +264,7 @@ $Id: 42812b7653c7b88933f8a9d6cad0ca16714b9bb3 $</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Потім, скажіть Git, що фільтр “indent” робить для smudge (забруднити) та clean (очистити):</p>
+<p>Потім, скажіть Git, що фільтр ``indent'' робить для smudge (забруднити) та clean (очистити):</p>
 </div>
 <div class="listingblock">
 <div class="content">
