--- a/external/book/content/book/uk/v2/Налаштування-Git-Конфігурація-Git.html
+++ b/external/book/content/book/uk/v2/Налаштування-Git-Конфігурація-Git.html
@@ -51,7 +51,7 @@ $ git config --global user.email johndoe@example.com</code></pre>
 (Якщо не задати явно рівень конфігурацію, типово буде використано цей.)</p>
 </div>
 <div class="paragraph">
-<p>Кожен з цих “рівнів” (системний, глобальний, локальний) переписує значення попереднього рівня, тобто, наприклад, значення в <code>.git/config</code> перекриває значення в <code>/etc/gitconfig</code>.</p>
+<p>Кожен з цих <code>`рівнів'' (системний, глобальний, локальний) переписує значення попереднього рівня, тобто, наприклад, значення в `.git/config</code> перекриває значення в <code>/etc/gitconfig</code>.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -252,7 +252,7 @@ in 0.1 seconds automatically...</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Зверніть увагу на це дивне “0.1 seconds”. Насправді значення опції <code>help.autocorrect</code> є цілим числом, що представляє десяті секудни.
+<p>Зверніть увагу на це дивне <code>`0.1 seconds''. Насправді значення опції `help.autocorrect</code> є цілим числом, що представляє десяті секудни.
 Тому, якщо встановити його рівним 50, то Git дасть вам 5 секунд, щоб змінити свою думку перед виконанням відкоректованої команди.</p>
 </div>
 </div>
