--- a/external/book/content/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-сховищами.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-сховищами.html
@@ -36,8 +36,8 @@ url: "/book/uk/v2/Основи-Git-Взаємодія-з-віддаленими-
 <td class="content">
 <div class="title">Віддалені сховища можуть розташовуватися на вашій локальній машині.</div>
 <div class="paragraph">
-<p>Цілком можливо, що ви працюватимете з “віддаленим” сховищем, що, насправді, міститься на тій саме машині, що ви за нею працюєте.
-Слово “віддалений” не обовʼязково означає, що сховище зберігається десь в мережі чи Інтернеті — лише що воно деінде.
+<p>Цілком можливо, що ви працюватимете з <code>віддаленим'' сховищем, що, насправді, міститься на тій саме машині, що ви за нею працюєте.
+Слово </code>віддалений'' не обовʼязково означає, що сховище зберігається десь в мережі чи Інтернеті — лише що воно деінде.
 Working with such a remote repository would still involve all the standard pushing, pulling and fetching operations as with any other remote.
 Взаємодія з таким віддаленим сховищем все одно включатиме звичні операції <code>push</code>, <code>pull</code> і <code>fetch</code> — як і з будь-яким іншим віддаленим сховищем.</p>
 </div>
@@ -159,8 +159,8 @@ From https://github.com/paulboone/ticgit
 Після цього, у вас будуть посилання на всі гілки з того сховища, які ви можете зливати або оглядати в будь-який час.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ви зробили клон сховища, команда автоматично додає це віддалене сховище під ім’ям “origin”.
-Отже, <code>git fetch origin</code> отримує будь-яку нову працю, що її виклали на той сервер після того, як ви зробили його клон (або востаннє отримували зміни з нього).
+<p>Якщо ви зробили клон сховища, команда автоматично додає це віддалене сховище під ім’ям <code>`origin''.
+Отже, `git fetch origin</code> отримує будь-яку нову працю, що її виклали на той сервер після того, як ви зробили його клон (або востаннє отримували зміни з нього).
 Важливо зауважити, що команда <code>git fetch</code> лише завантажує дані до вашого локального сховища — вона автоматично не зливає їх з вашою роботою, та не змінює вашу поточну працю.
 Вам буде потрібно вручну її злити, коли ви будете готові.</p>
 </div>
