--- a/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
@@ -60,7 +60,7 @@ nothing to commit, working directory clean</code></pre>
 <p>Це означає, що ваша робоча директорія чиста — іншими словами, жоден з контрольованих файлів не змінено.
 Git також не бачить неконтрольованих файлів, інакше він би їх тут вказав.
 Нарешті, ця команда показує вам, в якій ви зараз гілці та інформує вас про те, що вона не розбіглася з такою ж гілкою на сервері.
-Поки що, ця гілка завжди буде “master”, така гілка створюється автоматично. Це нас не обходить у цьому розділі.
+Поки що, ця гілка завжди буде ``master'', така гілка створюється автоматично. Це нас не обходить у цьому розділі.
 <a href="{{< relurl "book/uk/v2/ch00/ch03-git-branching" >}}">Галуження в git</a> розповідає про гілки та посилання докладно.</p>
 </div>
 <div class="paragraph">
@@ -82,10 +82,10 @@ nothing added to commit but untracked files present (use "git add" to track)</co
 </div>
 </div>
 <div class="paragraph">
-<p>Ви можете бачити, що ваш новий файл <code>README</code> неконтрольований, адже він під заголовком “Untracked files” у статусі.
+<p>Ви можете бачити, що ваш новий файл <code>README</code> неконтрольований, адже він під заголовком <code>`Untracked files'' у статусі.
 Неконтрольований (untracked) означає, що Git бачить файл, якого нема у попередньому знімку (коміті). Git не почне включати його до ваших комітів доки ви явно не скажете йому це зробити.
 Так зроблено щоб ви випадково не почали включати генеровані бінарні файли чи інші файли, які ви не збирались включати.
-Ви все ж таки хочете почати включати <code>README</code>, отже почнімо контролювати файл.</p>
+Ви все ж таки хочете почати включати `README</code>, отже почнімо контролювати файл.</p>
 </div>
 </div>
 <div class="sect3">
@@ -114,8 +114,8 @@ Changes to be committed:
 </div>
 </div>
 <div class="paragraph">
-<p>Ви можете зрозуміти, що цей файл доданий, бо він під заголовком “Changes to be committed”.
-Якщо ви створите коміт зміни зараз, версія файлу на момент коли ви виконали <code>git add</code> буде збережена в знімку в історії.
+<p>Ви можете зрозуміти, що цей файл доданий, бо він під заголовком <code>`Changes to be committed''.
+Якщо ви створите коміт зміни зараз, версія файлу на момент коли ви виконали `git add</code> буде збережена в знімку в історії.
 Ви можете пригадати, що коли ви виконали <code>git init</code> раніше, ви потім виконали <code>git add &lt;файли&gt;</code> — це було зроблено щоб розпочати контролювати файли у вашій директорії.
 Команда <code>git add</code> приймає шлях файлу або директорії. Якщо це директорія, команда додає усі файли в цій директорії рекурсивно.</p>
 </div>
@@ -144,11 +144,11 @@ Changes not staged for commit:
 </div>
 </div>
 <div class="paragraph">
-<p>Файл <code>CONTRIBUTING.md</code> з’явився під секцією названою “Changes not staged for commit” — це означає, що контрольований файл був редагований у робочій директорії проте його не індексували.
+<p>Файл <code>CONTRIBUTING.md</code> з’явився під секцією названою <code>Changes not staged for commit'' — це означає, що контрольований файл був редагований у робочій директорії проте його не індексували.
 Щоб проіндексувати його, виконайте команду <code>git add</code>.
 <code>git add</code> багатоцільова команда — її слід використовувати щоб почати контролювати нові файли, щоб додавати файли, та для інших речей, наприклад позначання конфліктних файлів як розв’язаних.
-Про неї краще думати “Додай саме цей зміст до наступного коміту” а не “додай цей файл до проекту”.
-Виконаймо <code>git add</code> зараз для індексації файлу <code>CONTRIBUTING.md</code>, а потім знову виконаємо <code>git status</code>:</p>
+Про неї краще думати </code>Додай саме цей зміст до наступного коміту'' а не <code>`додай цей файл до проекту''.
+Виконаймо `git add</code> зараз для індексації файлу <code>CONTRIBUTING.md</code>, а потім знову виконаємо <code>git status</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -250,7 +250,7 @@ M  lib/simplegit.rb
 </div>
 </div>
 <div class="paragraph">
-<p>Перший рядок каже Git ігнорувати файли, що закінчуються на “.o” або “.a” — об’єктні та архівні файли, що можуть бути продуктами компіляції вашого коду.
+<p>Перший рядок каже Git ігнорувати файли, що закінчуються на <code>.o'' або </code>.a'' — об’єктні та архівні файли, що можуть бути продуктами компіляції вашого коду.
 Другий рядок каже Git ігнорувати всі файли, що їхні назви закінчуються на тильду (<code>~</code>), яка використовується багатьма текстовими редакторами (такими як Emacs) щоб позначати тимчасові файли.
 Ви також можете додати директорії log, tmp та pid, автоматично згенеровану документацію, тощо.
 Заповнення файлу <code>.gitignore</code> вашого нового сховища до початку праці зазвичай гарна думка, адже це допоможе вам випадково не додати файли, які ви не хочете додавати до репозиторія Git.</p>
@@ -279,8 +279,8 @@ M  lib/simplegit.rb
 </div>
 <div class="paragraph">
 <p>Ґлоб (glob) взірці – це ніби спрощені регулярні вирази, що їх використовують оболонки.
-Зірочка (<code>*</code>) відповідає нулю або більше символам. <code>[абв]</code> відповідає будь-якому з символів всередині квадратних дужок (у цьому випадку а, б або в). Знак питання (<code>?</code>) відповідає одному символу. Квадратні дужки з символами, що розділені дефісом (<code>[0-9]</code>) відповідають будь-якому символу між ними (у даному випадку від 0 до 9).
-Ви можете використовувати дві зірочки щоб позначити вкладені директорії: <code>a/**/z</code> відповідає <code>a/z</code>, <code>a/b/z</code>, <code>a/b/c/z</code> тощо.</p>
+Зірочка (<code><strong></strong></code>) відповідає нулю або більше символам. <code>[абв]</code> відповідає будь-якому з символів всередині квадратних дужок (у цьому випадку а, б або в). Знак питання (<code>?</code>) відповідає одному символу. Квадратні дужки з символами, що розділені дефісом (<code>[0-9]</code>) відповідають будь-якому символу між ними (у даному випадку від 0 до 9).
+Ви можете використовувати дві зірочки щоб позначити вкладені директорії: <code>a/*/z</code> відповідає <code>a/z</code>, <code>a/b/z</code>, <code>a/b/c/z</code> тощо.</p>
 </div>
 <div class="paragraph">
 <p>Ось ще один приклад файлу <code>.gitignore</code>:</p>
@@ -602,7 +602,7 @@ $ git commit -a -m 'added new benchmarks'
 Команда <code>git rm</code> це робить, а також видаляє файл з вашої робочої директорії, щоб наступного разу він не відображався неконтрольованим.</p>
 </div>
 <div class="paragraph">
-<p>Якщо ви просто видалите файл з вашої робочої директорії, він з’явиться під заголовком “Changes not staged for commit” (тобто, <em>неіндексованим</em>) виводу команди <code>git status</code>:</p>
+<p>Якщо ви просто видалите файл з вашої робочої директорії, він з’явиться під заголовком <code>`Changes not staged for commit'' (тобто, <em>неіндексованим</em>) виводу команди `git status</code>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
