--- a/external/book/content/book/uk/v2/Основи-Git-Скасування-речей.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Скасування-речей.html
@@ -67,7 +67,7 @@ $ git commit --amend</code></pre>
 У результаті, попередній коміт ніби ніколи не існував, і його не буде видно в історії сховища.</p>
 </div>
 <div class="paragraph">
-<p>Очевидно, виправлення комітів дає можливість робити дрібні поліпшення останнього коміту й не засмічувати історію сховища повідомленнями комітів на кшталт “Йой, забув додати файл” чи “Дідько, виправив одрук в останньому коміті”.</p>
+<p>Очевидно, виправлення комітів дає можливість робити дрібні поліпшення останнього коміту й не засмічувати історію сховища повідомленнями комітів на кшталт <code>Йой, забув додати файл'' чи </code>Дідько, виправив одрук в останньому коміті''.</p>
 </div>
 </td>
 </tr>
@@ -95,7 +95,7 @@ Changes to be committed:
 </div>
 </div>
 <div class="paragraph">
-<p>Прямо під текстом “Changes to be committed” (зміни, що буде збережено), написано "use <code>git reset HEAD &lt;file&gt;...</code> to unstage" (скористайтесь <code>git reset HEAD &lt;file&gt;...</code> щоб вилучити)
+<p>Прямо під текстом <code>`Changes to be committed'' (зміни, що буде збережено), написано "use `git reset HEAD &lt;file&gt;…​</code> to unstage" (скористайтесь <code>git reset HEAD &lt;file&gt;…​</code> щоб вилучити)
 Отже, скористаймося цією порадою, щоб вилучити файл <code>CONTRIBUTING.md</code>:</p>
 </div>
 <div class="listingblock">
@@ -159,7 +159,7 @@ Changes not staged for commit:
 </div>
 </div>
 <div class="paragraph">
-<p>Тут чітко розповідають, як скасувати ваші зміни. (третій рядок перекладається <code>(використайте "git checkout -- &lt;file&gt;..." щоб скасувати зміни у вашій робочій директорії)</code>)
+<p>Тут чітко розповідають, як скасувати ваші зміни. (третій рядок перекладається <code>(використайте "git checkout — &lt;file&gt;…​" щоб скасувати зміни у вашій робочій директорії)</code>)
 Так і зробимо:</p>
 </div>
 <div class="listingblock">
@@ -184,7 +184,7 @@ Changes to be committed:
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Памʼятайте, команда <code>git checkout -- &lt;файл&gt;</code> небезпечна.
+<p>Памʼятайте, команда <code>git checkout — &lt;файл&gt;</code> небезпечна.
 Будь-які зроблені зміни зникли — Git просто скопіював інший файл поверх них.
 Ніколи не використовуйте цю команду, якщо у вас нема абсолютної впевненості, що цей файл вам не потрібен.</p>
 </div>
