--- a/external/book/content/book/uk/v2/Основи-Git-Теґування.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Теґування.html
@@ -189,7 +189,7 @@ a6b4c97498bd301d84096da251c98a07c7723e65 beginning write support
 </div>
 </div>
 <div class="paragraph">
-<p>Тепер, припустимо ви забули створити теґ до версії проекту v1.2, що має бути на коміті “updated rakefile”.
+<p>Тепер, припустимо ви забули створити теґ до версії проекту v1.2, що має бути на коміті ``updated rakefile''.
 Ви можете додати теґ і зараз.
 Щоб створити теґ до коміту, вам треба дописати суму коміту (чи її частину) наприкінці команди:</p>
 </div>
@@ -267,7 +267,7 @@ To git@github.com:schacon/simplegit.git
 <div class="sect3">
 <h3 id="_переключення_до_теґів">Переключення до теґів</h3>
 <div class="paragraph">
-<p>Якщо ви бажаєте переглянути версії файлів, на які вказує теґ, виконайте <code>git checkout</code>, хоча тоді ви отримаєте стан “відокремлений HEAD” (detached HEAD), що має декілька обмежень:</p>
+<p>Якщо ви бажаєте переглянути версії файлів, на які вказує теґ, виконайте <code>git checkout</code>, хоча тоді ви отримаєте стан ``відокремлений HEAD'' (detached HEAD), що має декілька обмежень:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -291,7 +291,7 @@ HEAD is now at df3f601... add atlas.json and cover image</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Якщо ви щось зміните й створите коміт у стані “відокремлений HEAD”, теґ залишиться незмінним, а а новий коміт не належатиме жодній гілці й буде досяжним лише за допомогою хеша коміту. Відповідно, якщо вам треба здійснити зміни — скажімо, ви виправляєте ваду у старшій версії — зазвичай варто створити гілку:</p>
+<p>Якщо ви щось зміните й створите коміт у стані ``відокремлений HEAD'', теґ залишиться незмінним, а а новий коміт не належатиме жодній гілці й буде досяжним лише за допомогою хеша коміту. Відповідно, якщо вам треба здійснити зміни — скажімо, ви виправляєте ваду у старшій версії — зазвичай варто створити гілку:</p>
 </div>
 <div class="listingblock">
 <div class="content">
