--- a/external/book/content/book/uk/v2/Розподілений-Git-Розподілені-процеси-роботи.html
+++ b/external/book/content/book/uk/v2/Розподілений-Git-Розподілені-процеси-роботи.html
@@ -68,7 +68,7 @@ url: "/book/uk/v2/Розподілений-Git-Розподілені-проце
 <div class="paragraph">
 <p>
 Оскільки Git дозволяє вам мати декілька віддалених сховищ, можливо мати процес роботи, в якому кожен розробник має право на запис до власного публічного репозиторія та доступ на читання до репозиторіїв інших розробників.
-Цей сценарій зазвичай включає канонічне сховище, яке представляє “офіційний” проект.
+Цей сценарій зазвичай включає канонічне сховище, яке представляє ``офіційний'' проект.
 Щоб зробити внесок до такого проекту, треба створити власний публічний клон проекту та надіслати зміни до нього.
 Потім, ви можете надіслати запит до супроводжувача головного проекту, щоб він злив ваші зміни.
 Супроводжувач тоді може додати ваше сховище як віддалене, перевірити ваші зміни локально, злити їх до своєї гілки, та надіслати до свого репозиторія.
