--- a/external/book/content/book/uk/v2/Розподілений-Git-Супроводжування-проекту.html
+++ b/external/book/content/book/uk/v2/Розподілений-Git-Супроводжування-проекту.html
@@ -75,7 +75,7 @@ url: "/book/uk/v2/Розподілений-Git-Супроводжування-п
 <p>Це змінює файли у вашій робочій директорії.
 Це майже те саме, що виконати команду <code>patch -p1</code>, щоб застосувати латку, хоча вона є більш параноїдною та приймає менше невизначених збігів, ніж patch.
 Вона також опрацьовує додавання, вилучення та перейменування файлів, якщо вони описані в форматі <code>git diff</code>, чого <code>patch</code> не зробить.
-Нарешті, <code>git apply</code> працює за принципом “застосувати все або скасувати все”: буде застосовано все або нічого, у той час як <code>patch</code> може частково застосувати латки, залишивши робочу директорію в дивному стані.
+Нарешті, <code>git apply</code> працює за принципом <code>`застосувати все або скасувати все'': буде застосовано все або нічого, у той час як `patch</code> може частково застосувати латки, залишивши робочу директорію в дивному стані.
 Загалом <code>git apply</code> набагато консервативніша, ніж <code>patch</code>.
 Вона не створить для вас коміт — після виконання, вам доведеться індексувати та зберегти нові зміни вручну.</p>
 </div>
@@ -503,10 +503,10 @@ Finished one cherry-pick.
 <h4 id="_rerere">Rerere</h4>
 <div class="paragraph">
 <p>
-Якщо ви робите багато зливань та перебазувань, або супроводжуєте довготривалу тематичну гілку, Git має функціонал під назвою “rerere”, який може стати в пригоді.</p>
+Якщо ви робите багато зливань та перебазувань, або супроводжуєте довготривалу тематичну гілку, Git має функціонал під назвою ``rerere'', який може стати в пригоді.</p>
 </div>
 <div class="paragraph">
-<p>Rerere означає “використовуй записані розвʼязання” (reuse recorded resolution) — це метод скоротити ручні розвʼязання конфліктів.
+<p>Rerere означає ``використовуй записані розвʼязання'' (reuse recorded resolution) — це метод скоротити ручні розвʼязання конфліктів.
 Коли rerere ввімкнено, Git зберігає набір відбитків станів до та після успішних зливань, та, якщо бачить конфлікт, який виглядає саме так, як якийсь вже розвʼязаний, він просто використає попереднє розвʼязання, і не буде вас ним турбувати.</p>
 </div>
 <div class="paragraph">
@@ -595,7 +595,7 @@ sub   2048g/45D02282 2009-02-09 [expires: 2010-02-09]</code></pre>
 <h3 id="_build_number">Генерація номеру збірки</h3>
 <div class="paragraph">
 <p>
-Оскільки Git не має монотонно зростаючих номерів як <em>v123</em> чи чогось подібного для кожного коміту, якщо ви бажаєте мати зручне для людини імʼя для коміту, ви можете виконати <code>git describe</code> для цього коміту.
+Оскільки Git не має монотонно зростаючих номерів як 'v123' чи чогось подібного для кожного коміту, якщо ви бажаєте мати зручне для людини імʼя для коміту, ви можете виконати <code>git describe</code> для цього коміту.
 Git надає вам імʼя найближчого теґу разом з кількістю комітів поверху цього теґу, а також часткове значення SHA-1 для описаного коміту:</p>
 </div>
 <div class="listingblock">
