--- a/external/book/content/book/uk/v2/GitHub-Керування-організацією.html
+++ b/external/book/content/book/uk/v2/GitHub-Керування-організацією.html
@@ -24,18 +24,18 @@ url: "/book/uk/v2/GitHub-Керування-організацією.html"
 Крім облікових записів на одного користувача, на GitHub також є так звані Організації.
 Як і особисті облікові записи, облікові записи Організацій мають свій простір імен, в якому існують усі їхні проекти, проте багато іншого для них відрізняється.
 Ці облікові записи представляють групу людей з сумісним правом власності проектів, та є багато інструментів для керування підгрупами цих людей.
-Зазвичай організації використовують для груп з Відкритим Кодом (такі як “perl” чи “rails”) або компаній (такі як “google” чи “twitter”).</p>
+Зазвичай організації використовують для груп з Відкритим Кодом (такі як <code>perl'' чи </code>rails'') або компаній (такі як <code>google'' чи </code>twitter'').</p>
 </div>
 <div class="sect3">
 <h3 id="_основи_організацій">Основи організацій</h3>
 <div class="paragraph">
-<p>Організацію доволі легко створити: просто натисніть на іконку “+” у нагорі праворуч на будь-якій сторінці GitHub та виберіть у меню “New organization” (нова організація).</p>
+<p>Організацію доволі легко створити: просто натисніть на іконку <code>+'' у нагорі праворуч на будь-якій сторінці GitHub та виберіть у меню </code>New organization'' (нова організація).</p>
 </div>
 <div class="imageblock">
 <div class="content">
 <img src="{{< relurl "book/uk/v2/images/neworg.png" >}}" alt="Елемент меню ``New organization'' (нова організація).">
 </div>
-<div class="title">Рисунок 125. Елемент меню “New organization” (нова організація).</div>
+<div class="title">Рисунок 125. Елемент меню ``New organization'' (нова організація).</div>
 </div>
 <div class="paragraph">
 <p>Спочатку вам треба назвати вашу організацію та надати поштову адресу, що буде головним контактом групи.
@@ -48,7 +48,7 @@ url: "/book/uk/v2/GitHub-Керування-організацією.html"
 <div class="paragraph">
 <p>Як власник організації, коли ви робите форк сховища, у вас буде вибір: робити форк у вашому власному просторі імен, чи у просторі імен організації.
 Коли ви створюєте нові сховища, ви можете створити їх або під особистим обліковим записом, або під будь-якою організацією, що її власником є ви.
-Також ви автоматично будете “слідкувати” (<code>watch</code>) за всіма сховищами, що ви створили для цих організацій.</p>
+Також ви автоматично будете <code>`слідкувати'' (`watch</code>) за всіма сховищами, що ви створили для цих організацій.</p>
 </div>
 <div class="paragraph">
 <p>Так само як у <a href="{{< relurl "book/uk/v2/ch00/_personal_avatar" >}}">Ваш аватар</a>, ви можете відвантажити аватар для вашої організації щоб трохи додати їй особливості.
@@ -81,7 +81,7 @@ url: "/book/uk/v2/GitHub-Керування-організацією.html"
 <p>Щоб керувати вашими Командами, ви можете натиснути на бокову панель Teams праворуч на сторінці <a href="{{< relurl "book/uk/v2/ch00/_org_page" >}}">Сторінка Організації.</a>.
 Тоді ви потрапите до сторінки, на якій ви можете додавати користувачів до команди, додавати сховища до команди та керувати налаштуваннями та рівнем доступу команди.
 Кожна команда може мати доступ тільки на читання, доступ на читання та запис або доступ адміністрування до сховищ.
-Ви можете змінити рівень, якщо натиснете на кнопку “Settings” (налаштування) у <a href="{{< relurl "book/uk/v2/ch00/_team_page" >}}">Сторінка команди.</a>.</p>
+Ви можете змінити рівень, якщо натиснете на кнопку ``Settings'' (налаштування) у <a href="{{< relurl "book/uk/v2/ch00/_team_page" >}}">Сторінка команди.</a>.</p>
 </div>
 <div id="_team_page" class="imageblock">
 <div class="content">
@@ -105,7 +105,7 @@ url: "/book/uk/v2/GitHub-Керування-організацією.html"
 <h3 id="_журнал_подій">Журнал подій</h3>
 <div class="paragraph">
 <p>Організації також надають власникам доступ до всієї інформації про те, що діялося в організації.
-Ви можете перейти до вкладки <em>Audit Log</em> (<em>Журнал Подій</em>) та побачити всі події, які відбувалися на рівні організації, хто та де в світі їх учинив.</p>
+Ви можете перейти до вкладки 'Audit Log' ('Журнал Подій') та побачити всі події, які відбувалися на рівні організації, хто та де в світі їх учинив.</p>
 </div>
 <div id="_the_audit_log" class="imageblock">
 <div class="content">
