--- a/external/book/content/book/uk/v2/Інструменти-Git-Збереження-посвідчення-credential.html
+++ b/external/book/content/book/uk/v2/Інструменти-Git-Збереження-посвідчення-credential.html
@@ -37,21 +37,21 @@ url: "/book/uk/v2/Інструменти-Git-Збереження-посвідч
 Кожне зʼєднання потребує від вас імʼя користувача та пароль.</p>
 </li>
 <li>
-<p>Режим “cache” зберігає посвідчення в памʼяті визначений термін.
+<p>Режим ``cache'' зберігає посвідчення в памʼяті визначений термін.
 Жоден пароль не зберігається на диску, та вичищається з памʼяті за 15 хвилин.</p>
 </li>
 <li>
-<p>Режим “store” зберігає посвідчення до простого текстового файлу на диску, та ніколи не застаріває.
+<p>Режим ``store'' зберігає посвідчення до простого текстового файлу на диску, та ніколи не застаріває.
 Це означає, що доки ви не зміните пароль для Git, вам ніколи не доведеться набирати ваші дані знов.
 Недоліком цього методу є те, що ваші паролі зберігаються текстом у простому файлі в домашній директорії.</p>
 </li>
 <li>
-<p>Якщо ви використовуєте Mac, Git має режим “osxkeychain”, який зберігає посвідчення у безпечному ланцюгу ключів (keychain), що є привʼязаним до вашого системного облікового запису.
+<p>Якщо ви використовуєте Mac, Git має режим ``osxkeychain'', який зберігає посвідчення у безпечному ланцюгу ключів (keychain), що є привʼязаним до вашого системного облікового запису.
 Цей метод зберігає посвідчення на диску і ніколи не застаріває, проте його зашифровано так само, як система зберігає сертифікати HTTPS та автозаповнювачі Safari.</p>
 </li>
 <li>
-<p>Якщо ви використовуєте Windows, то можете встановити помічник (helper) під назвою “Git Credential Manager for Windows”.
-Це схоже на описаний вище “osxkeychain”, проте використовує Windows Credential Store для контролю за приватною інформацією.
+<p>Якщо ви використовуєте Windows, то можете встановити помічник (helper) під назвою <code>Git Credential Manager for Windows''.
+Це схоже на описаний вище </code>osxkeychain'', проте використовує Windows Credential Store для контролю за приватною інформацією.
 Його можна знайти за посиланням <a href="https://github.com/Microsoft/Git-Credential-Manager-for-Windows" class="bare">https://github.com/Microsoft/Git-Credential-Manager-for-Windows</a>.</p>
 </li>
 </ul>
@@ -66,9 +66,9 @@ url: "/book/uk/v2/Інструменти-Git-Збереження-посвідч
 </div>
 <div class="paragraph">
 <p>Деякі з цих помічників мають опції.
-Помагач “store” може приймати аргумент <code>--file &lt;шлях&gt;</code>, який задає, куди зберігається текстовий файл (типове значення <code>~/.git-credentials</code>).
-Помагач “cache” приймає опцію <code>--timeout &lt;секунд&gt;</code>, яка змінює термін, протягом якого демон працює (типове значення “900”, тобто 15 хвилин).
-Ось приклад, як можна налаштувати помічник “store” особистим іменем файлу:</p>
+Помагач <code>store'' може приймати аргумент <code>--file &lt;шлях&gt;</code>, який задає, куди зберігається текстовий файл (типове значення <code>~/.git-credentials</code>).
+Помагач </code>cache'' приймає опцію <code>--timeout &lt;секунд&gt;</code>, яка змінює термін, протягом якого демон працює (типове значення <code>900'', тобто 15 хвилин).
+Ось приклад, як можна налаштувати помічник </code>store'' особистим іменем файлу:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -97,7 +97,7 @@ url: "/book/uk/v2/Інструменти-Git-Збереження-посвідч
 <div class="paragraph">
 <p>Можливо це легше зрозуміти за допомогою прикладу.
 Припустімо, помічник посвідчень вже налаштовано, та він вже зберіг посвідчення для <code>mygithost</code>.
-Ось сесія, що використовує команду “fill”, яка викликається при спробі знайти посвідчення для хосту:</p>
+Ось сесія, що використовує команду ``fill'', яка викликається при спробі знайти посвідчення для хосту:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -177,7 +177,7 @@ password=s3cre7</code></pre>
 </table>
 <div class="paragraph">
 <p>Отже, вищеописані помічники насправді мають назви <code>git-credential-cache</code>, <code>git-credential-store</code> тощо, та ми можемо їх налаштувати, щоб вони приймали аргументи командного рядка.
-Загальна форма для цього “git-credential-foo [аргументи] &lt;дія&gt;.”
+Загальна форма для цього ``git-credential-foo [аргументи] &lt;дія&gt;.''
 Протокол stdin/stdout такий самий, як для git-credential, проте вони використовують трохи інших набір дій:</p>
 </div>
 <div class="ulist">
@@ -220,11 +220,11 @@ password=s3cre7</code></pre>
 <div class="colist arabic">
 <ol>
 <li>
-<p>Тут ми кажемо <code>git-credential-store</code> зберегти деякі посвідчення: імʼя “bob” та пароль “s3cre7” мають використовуватись при доступі до <code>https://mygithost</code>.</p>
+<p>Тут ми кажемо <code>git-credential-store</code> зберегти деякі посвідчення: імʼя <code>bob'' та пароль </code>s3cre7'' мають використовуватись при доступі до <code><a href="https://mygithost" class="bare">https://mygithost</a></code>.</p>
 </li>
 <li>
 <p>Тепер ми отримаємо це посвідчення.
-Ми надаємо вже відомі частини зʼєднання (<code>https://mygithost</code>) та порожній рядок.</p>
+Ми надаємо вже відомі частини зʼєднання (<code><a href="https://mygithost" class="bare">https://mygithost</a></code>) та порожній рядок.</p>
 </li>
 <li>
 <p><code>git-credential-store</code> відповідає збереженими вище імʼям користувача та паролем.</p>
@@ -342,7 +342,7 @@ password=s3cre7</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Оскільки його назва починається з “git-”, ми можемо використати простий синтаксис для значення налаштування:</p>
+<p>Оскільки його назва починається з ``git-'', ми можемо використати простий синтаксис для значення налаштування:</p>
 </div>
 <div class="listingblock">
 <div class="content">
